--- a/cs50/03.Arrays.md
+++ b/cs50/03.Arrays.md
@@ -1,24 +1,24 @@
 # 1) 컴파일링
-	- 헤더파일 라이브러리는 공구상자 같은거구나
-	- clang은 어셈블리 코드를 입력받아 머신코드로 변환한다
+- 헤더파일 라이브러리는 공구상자 같은거구나
+- clang은 어셈블리 코드를 입력받아 머신코드로 변환한다
 ## 전처리(Precompile)
-	- 컴파일이 이루어지기 전에 실행
-	- #include 
-		○ stdio.h를 실행시켜주는 전처리기
-		○ h는 헤더파일을 의미
+- 컴파일이 이루어지기 전에 실행
+- #include
+  - stdio.h를 실행시켜주는 전처리기
+  - h는 헤더파일을 의미
 ## 컴파일(Compile)
-	- 전처리 실행 후 C코드를 어셈블리어라는 저수준 프로그래밍 언어로 컴파일
-	- 컴퓨터가 이해할 수 있는 언어와 최대한 가까운 프로그램으로 변환
+- 전처리 실행 후 C코드를 어셈블리어라는 저수준 프로그래밍 언어로 컴파일
+- 컴퓨터가 이해할 수 있는 언어와 최대한 가까운 프로그램으로 변환
 
 ## 어셈블(Assemble)
-	- 어셈블리 코드로 변환되면 어셈블 단계로 코드를 변환
-	- 연속된 0과 1들로 바꿔주는 작업
-	- **어셈블러**라는 프로그램이 작업 수행
+- 어셈블리 코드로 변환되면 어셈블 단계로 코드를 변환
+- 연속된 0과 1들로 바꿔주는 작업
+- **어셈블러**라는 프로그램이 작업 수행
 
 ## 링크(Link)
-	- 프로그램이 여러개의 파일로 이루어져 있어(라이브러리 포함)
-	하나의 오브젝트 파일로 합쳐져야 한다면 **링크**라는 컴파일의 마지막 단계가 필요하다
-	- 여러개의 다른 오브젝트 코드 파일을 실행 가능한 하나의 오브젝트 코드 파일로 합쳐준다
+- 프로그램이 여러개의 파일로 이루어져 있어(라이브러리 포함)		
+하나의 오브젝트 파일로 합쳐져야 한다면 **링크**라는 컴파일의 마지막 단계가 필요하다
+- 여러개의 다른 오브젝트 코드 파일을 실행 가능한 하나의 오브젝트 코드 파일로 합쳐준다
 	
 ---
 # 2) 디버깅
