--- a/CS50(2019)/03.Arrays.md
+++ b/CS50(2019)/03.Arrays.md
@@ -16,44 +16,42 @@
 - **어셈블러**라는 프로그램이 작업 수행
 
 ## 링크(Link)
-- 프로그램이 여러개의 파일로 이루어져 있어(라이브러리 포함)		
+- 프로그램이 여러개의 파일로 이루어져 있어(라이브러리 포함)   
 하나의 오브젝트 파일로 합쳐져야 한다면 **링크**라는 컴파일의 마지막 단계가 필요하다
 - 여러개의 다른 오브젝트 코드 파일을 실행 가능한 하나의 오브젝트 코드 파일로 합쳐준다
 	
 ---
 # 2) 디버깅
-
 ## 버그
-	- 의도하지 않은 프로그래밍 실수
-	- 버그가 발생했을 때 help50 명령어를 이용해라
+- 의도하지 않은 프로그래밍 실수
+- 버그가 발생했을 때 help50 명령어를 이용해라
 
-	- debug50를 IDE에서 사용
-		○ debug50 ./buggy2
-	- IDE를 이용해서 코드의 번호를 클릭해보자
-	그러면 클릭해놓은곳에서 한번씩 멈추면서 과정을 보여주게 된다
-	- 하루라도 빨리 사용해서 익숙해지고 활용해라
+- debug50를 IDE에서 사용
+  - debug50 ./buggy2
+- IDE를 이용해서 코드의 번호를 클릭해보자  
+그러면 클릭해놓은곳에서 한번씩 멈추면서 과정을 보여주게 된다
+- **하루라도 빨리 사용해서 익숙해지고 활용해라**
 ---
 # 3) 코드의 디자인
 큰 규모 프로젝트는 여러 사람들이 함께 작업을 진행하게 된다.
 이럴 때는 코드의 내용 뿐만 아니라 형식 또안 신경써줘야 한다.
 
 테스트를 해줘서 작동되는지 파악을 꾸준히 해줘야 한다
-	- 코드를 작성할 때는 유지 보수를 하기 위해 코드를 보기 좋게 작성해야 한다
-	- style50 사용
-		○ ex) style 50 hello.c
-	- 컴퓨터는 간단한 조언도 복잡하게 할 때가 있다.
-	- IDE는 자동장을 지원하지 않는다
-	- CS50 고무오리 디버깅
-		○ 대상을 앞에두고 사람에게 설명하는것 처럼 내가 짠 코드를 설명한다
-		○ 이를통해 깨달음을 얻을 수 있다.
-
+- 코드를 작성할 때는 유지 보수를 하기 위해 코드를 보기 좋게 작성해야 한다
+- style50 사용
+  - ex) style 50 hello.c
+- 컴퓨터는 간단한 조언도 복잡하게 할 때가 있다.
+- IDE는 자동장을 지원하지 않는다
+- CS50 고무오리 디버깅
+  - 대상을 앞에두고 사람에게 설명하는것 처럼 내가 짠 코드를 설명한다
+  - 이를통해 깨달음을 얻을 수 있다.
 
 ## 4) 배열
-	- 배열은 값의 리스트로써 모두 같은 자료형의 값들이 같은 이름의 변수에 저장되어 있다.
-	- 메모리상에 저장된다
-	- 배열 생성
-		○ int socres[3]
-		○ int(객체 타입) scores(이름)[3](배열의 크기) 
+- 배열은 값의 리스트로써 모두 같은 자료형의 값들이 같은 이름의 변수에 저장되어 있다.
+- 메모리상에 저장된다
+- 배열 생성
+  - int socres[3]
+  - int(객체 타입) scores(이름)[3](배열의 크기) 
 
 
 ## 5) 배열(2)
