--- a/CS50(2019)/03.Arrays.md
+++ b/CS50(2019)/03.Arrays.md
@@ -55,24 +55,24 @@
 
 
 ## 5) 배열(2)
-	- 상수를 이용해서 값을 지정해으면 나중을 위해서 좋다(대문자로 생성하자, 그래야 소문자변수를 사용가능)
-		○ 코드 수정이 필요할 때 맨 위에 상수만 고쳐주면 된다
-	- 전역변수
-		○ 함수 밖에서 선언하는 변수이다
-	- 정수 / 정수 = 정수
-		○ float형태를 나타내고 싶다면 형 변환을 해주어야 한다
-		○ (float)sum / (float)length;
-		○ 0.49을 %.1f로 받으면 반올림이 되서 0.5가 된다
+- 상수를 이용해서 값을 지정해으면 나중을 위해서 좋다(대문자로 생성하자, 그래야 소문자변수를 사용가능)
+  - 코드 수정이 필요할 때 맨 위에 상수만 고쳐주면 된다
+- 전역변수
+  - 함수 밖에서 선언하는 변수이다
+- 정수 / 정수 = 정수
+  - float형태를 나타내고 싶다면 형 변환을 해주어야 한다
+  - (float)sum / (float)length;
+  - 0.49을 %.1f로 받으면 반올림이 되서 0.5가 된다
 
 
 ## 6) 문자열과 배열
 ### 문자열이 C에서 정의되는 방식과 메모리에 저장되는 방식
-	- string c = "hello"; 는 문자형으로 불러올 수 있다
-		○ c[0] = h / c[1] = e …
-	- 입력받는 값에 따라 바뀌는 string은 정해진 크기를 가질 수 없다
-		○ string의 끝나는부분을 알려주는 것이 \0(null)이다
-		○ hello\0 이렇게 된다
-			§ \0dmf null 이라고 한다
+- string c = "hello"; 는 문자형으로 불러올 수 있다
+  - c[0] = h / c[1] = e …
+- 입력받는 값에 따라 바뀌는 string은 정해진 크기를 가질 수 없다
+  - string의 끝나는부분을 알려주는 것이 \0(null)이다
+  - hello\0 이렇게 된다
+    - \0은 null 이라고 한다
 ```
 #include<stdio.h>
 #include<cs50.h>
@@ -116,7 +116,7 @@ int main(void)
 }
 ```
 
-	- 아스키 코드를 활용
+- 아스키 코드를 활용
 ```
 #include<cs50.h>
 #include<stdio.h>
@@ -141,61 +141,61 @@ int main(void)
 
 }
 ```
-	- cs50프로그렘 매뉴얼 확인해서 다른 코드를 사용할 수 있다.
-		○ 헤더를 추가해서 사용한다
-	```
-	#include<cs50.h>
-	#include<stdio.h>
-	#include<string.h>
-	#include<ctype.h>
+- cs50프로그렘 매뉴얼 확인해서 다른 코드를 사용할 수 있다.
+  - 헤더를 추가해서 사용한다
+```
+#include<cs50.h>
+#include<stdio.h>
+#include<string.h>
+#include<ctype.h>
 	
-	int main(void)
-	{
-	    string s = get_string("Before: ");
-	    printf("After: ");
-	    for(int i = 0, n = strlen(s); i < n; i++)
-	    {
-	        if(s[i] >= 'a' && s[i] <= 'z')
-	        {
-	            printf("%c", toupper(s[i]));
-	        }
-	    }
-	    printf("\n");
-	}
-	```
+int main(void)
+{
+    string s = get_string("Before: ");
+    printf("After: ");
+    for(int i = 0, n = strlen(s); i < n; i++)
+    {
+        if(s[i] >= 'a' && s[i] <= 'z')
+        {
+            printf("%c", toupper(s[i]));
+        }
+    }
+    printf("\n");
+}
+```
 
 ## 8) 명령행 인자
 ### 명령행 인자를 받는 프로그램을 C로 작성
-	- 실행하고자하는 프로그램 뒤에다가 성한다
-	- ~/ $ ./argv David
-		○ ./argv가 argv[0]로 입력되고(프로그램의 이름)
-		○ argv[1]에 David가 입력되고
-		○ argc에는 함수가 받게 될 **입력의 개수**
+- 실행하고자하는 프로그램 뒤에다가 성한다
+- ~/ $ ./argv David
+  - ./argv가 argv[0]로 입력되고(프로그램의 이름)
+  - argv[1]에 David가 입력되고
+  - argc에는 함수가 받게 될 **입력의 개수**
 		
-	```
-	#include<stdio.h>
-	#include<cs50.h>
+```
+#include<stdio.h>
+#include<cs50.h>
 	
-	int main(int argc, string argv[])
-	{
-	    if(argc ==2)
-	    {
-	        printf("hello, %s\n", argv[1]);
-	    }
-	    else
-	    {
-	        printf("hello, world\n");
-	    }
-	
-	}
-	```
-	- C는 기본적으로 반환값을 가진다
-		○ main은 0을 반환한다
-			§ 0은 보통 '문제없음'을 의미한다
-	- 만약 영어단어를 암호화 한다면
-		1. 글자를 아스키로 변환
-		2. 아스키숫자 + 1
-		3. 다시 글자로 변환
+int main(int argc, string argv[])
+{
+    if(argc ==2)
+    {
+        printf("hello, %s\n", argv[1]);
+    }
+    else
+    {
+        printf("hello, world\n");
+    }
+
+}
+```
+- C는 기본적으로 반환값을 가진다
+  - main은 0을 반환한다
+    - 0은 보통 '문제없음'을 의미한다
+  - 만약 영어단어를 암호화 한다면
+    1. 글자를 아스키로 변환
+    2. 아스키숫자 + 1
+    3. 다시 글자로 변환
 
 
 
