--- a/TCP_HTML/html02_07.md
+++ b/TCP_HTML/html02_07.md
@@ -1,11 +1,10 @@
 # 2. HTML 텍스트 요소
 ## 7) 서식
----
 
 ### 서식(Formatting)
 HTML은 텍스트(text)에 다양한 효과를 주는 여러 태그(tag)를 제공합니다.
----
 
+---
 ### 강조 효과
 HTML 문서에서 텍스트를 굵게 표현하고 싶을 때에는 **`<b>`**태그(bold text)나 **`<strong>`**태그를 사용하면 된다.
 ```
@@ -28,9 +27,9 @@ HTML문서에서 이탤릭체를 표현하고 싶을 때에는 **`<i>`**태그(i
 `<i>`태그는 단순히 화면의 텍스트를 이탤릭체로 표현해 줍니다.
 하지만 `<em>`태그는 텍스트를 이탤릭체로 변환해줄 뿐만 아니라 그 **내용이 중요하다는 의미도 함꼐 포함해 준다.**
 
-**검색엔진은 `<strong>`태그나 `<em>`태그를 사용하여 강조된 텍스트를 더 중요하게 인식합니다.
----
+**검색엔진은 `<strong>`태그나 `<em>`태그를 사용하여 강조된 텍스트를 더 중요하게 인식합니다.**
 
+---
 ### 하이라이팅 효과
 `<mark>`태그는 텍스트에 하이라이팅(highlighting) 효과를 적용시켜 줍니다.
 ```
@@ -39,8 +38,8 @@ HTML문서에서 이탤릭체를 표현하고 싶을 때에는 **`<i>`**태그(i
 <p><mark>"이 부분"</mark>만 하이라이팅 하고 싶어요</p>
 ```
 **형광펜을 칠해준 효과**
----
 
+---
 ### 삭제 효과
 `<del>`태그(delete)는 텍스트 중앙에 가로줄을 만들어 마치 텍스트를 지운 것과 같은 효과를 내준다.
 ```
