--- a/TCP_HTML/html02_07.md
+++ b/TCP_HTML/html02_07.md
@@ -1,12 +1,12 @@
 # 2. HTML 텍스트 요소
 ## 7) 서식
 
-### 서식(Formatting)
+### **서식(Formatting)**
 HTML은 텍스트(text)에 다양한 효과를 주는 여러 태그(tag)를 제공합니다.
 
 ---
 ### 강조 효과
-HTML 문서에서 텍스트를 굵게 표현하고 싶을 때에는 **`<b>`**태그(bold text)나 **`<strong>`**태그를 사용하면 된다.
+HTML 문서에서 텍스트를 굵게 표현하고 싶을 때에는 `<b>` 태그(bold text)나 `<strong>`태그를 사용하면 된다.
 ```
 예제
 
@@ -14,10 +14,10 @@ HTML 문서에서 텍스트를 굵게 표현하고 싶을 때에는 **`<b>`**태
 <p><strong>"이 부분"</strong>은 중요한 부분이라서 굵게 표현됬어요!</p>
 ```
 `<b>`태그는 단순히 화면의 텍스트를 굵게 표현해 줍니다.
-하지만 **`<strong>`**태그는 텍스트를 굵게 표현해줄 뿐만 아니라 그 **내용이 중요하다는 의미도 함꼐 포함해 준다.**
+하지만 `<strong>`태그는 텍스트를 굵게 표현해줄 뿐만 아니라 그 **내용이 중요하다는 의미도 함꼐 포함해 준다.**
 
-HTML문서에서 이탤릭체를 표현하고 싶을 때에는 **`<i>`**태그(italic text)나 **`<em>`**태그(emphasized text)를 사용합니다.
-**`*이탤릭체는 글자가 기울어진 상태`**
+HTML문서에서 이탤릭체를 표현하고 싶을 때에는 `<i>`태그(italic text)나 `<em>`태그(emphasized text)를 사용합니다.
+**주석: 이탤릭체는 글자가 기울어진 상태**
 ```
 예제
 
