--- a/TCP_HTML/02_07.md
+++ b/TCP_HTML/02_07.md
@@ -39,7 +39,7 @@ HTML문서에서 이탤릭체를 표현하고 싶을 때에는 `<i>`태그(itali
 ```
 **형광펜을 칠해준 효과**
 
----
+--- 
 ### 삭제 효과
 `<del>`태그(delete)는 텍스트 중앙에 가로줄을 만들어 마치 텍스트를 지운 것과 같은 효과를 내준다.
 ```
@@ -48,7 +48,25 @@ HTML문서에서 이탤릭체를 표현하고 싶을 때에는 `<i>`태그(itali
 <p><del>"이 부분"</del>을 지운 것처럼 하고 싶어요</p>
 ```
 
+---
+### 삽입 효과
+`<ins>`태그(insert)는 텍스트 밑에 가로줄을 만들어 마치 빈칸에 텍스트를 삽입한 것과 같은 효과를 내준다.
+```
+예제
 
+<p><ins>"밑줄 친 부분"</ins>에 들어갈 알맞은 말을 고르세요</p>
+```
+
+---
+### 위첨자와 아래첨자 효과
+위첨자는 `<sup>`태그(superscript)를 사용하여, 아래첨자는 `<sub>`태그(subscript)를 사용하여 각각 표현할 수 있습니다.
+***제곱을 표현할 때처럼 나타내 준다**
+``
+에제
+
+<p>X<sup>2</sup> + Y<sup>3</sup> = Z</p>
+<p>물을 나타내는 화학식은 H<sub>2</sub>O 입니다.</p>
+```
 
 
 
