--- a/TCP_JavaScript/02_07.md
+++ b/TCP_JavaScript/02_07.md
@@ -86,3 +86,137 @@ var fourthStr = '나의 이름은 "홍길동"이야.';
   </body>
 </html>
 ```
+
+---
+
+### 3. 불리언(boolean)
+
+불리언은 참(true)와 거짓(false)을 표현한다.
+
+자바스크립트에서는 boolean값은 예약어인 true와 false를 사용하여 나타낼 수 있다.
+
+```
+예제
+
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JavaScript DataType</title>
+  </head>
+  <body>
+    <h1>boolean Type!</h1>
+    <p id="result"></p>
+    <script>
+      var firstNum = 10;
+      var secondNum = 11;
+
+      document.getElementById("result").innerHTML = firstNum == secondNum; //false
+    </script>
+  </body>
+</html>
+```
+
+---
+
+### 4. 심볼(symbol)
+
+심볼 타입은 ECMAScript 6부터 새롭게 추가된 타입이다.
+심볼은 유일하고 변경할 수 없는 타입으로, 객체의 프로퍼티를 위한 식별자로 사용할 수 있다.
+
+```
+예제
+
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JavaScript DataType</title>
+  </head>
+
+  <body>
+    <h1>Symbol Type!</h1>
+    <p id="result"></p>
+    <script>
+      var sym = Symbol("javascript"); //Symbol(심볼) Type
+      var symObj = Object(sym); //Object(객체) Type
+      document.getElementById("result").innerHTML =
+        typeof sym + "<br>" + typeof symObj;
+    </script>
+  </body>
+</html>
+```
+
+`심볼 타입은 익스플로러에서 지원하지 않습니다.`
+
+---
+
+### 5. typeof 연산자
+
+피연산자의 타입을 반환하는 피연산자가 단 하나뿐인 연산자입니다.(??????)
+
+```
+예제
+
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JavaScript DataType</title>
+  </head>
+  <body>
+    <h1>typeof 연산자</h1>
+    <p id="result"></p>
+    <script>
+      document.getElementById("result").innerHTML = typeof 10 + "<br>"; //1.number 타입
+      document.getElementById("result").innerHTML += typeof "문자열" + "<br>"; //2.string 타입
+      document.getElementById("result").innerHTML += typeof true + "<br>"; //3.boolean 타입
+      document.getElementById("result").innerHTML += typeof undefined + "<br>"; //4.undefined 타입
+      document.getElementById("result").innerHTML += typeof null; //5.object 타입
+    </script>
+  </body>
+</html>
+```
+
+---
+
+### 6. null과 undefined
+
+`null`이란 object타입이며, **아직 '값'이 정해지지 않은 것**을 의미합니다.
+또한, `undefined`란 null과는 달리 **'타입'이 정해지지 않은것**을 의미한다.
+따라서 자바스크립트에서 indefined는 초기화되지 않은 변수나 존재하지 않는 값에 접근할 떄 반환된다.
+
+```
+예제
+
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JavaScript Data Type</title>
+  </head>
+  <body>
+    <h1>null과 undefined</h1>
+    <p id="result"></p>
+    <script>
+      var num; //초기화 하지 않아서 undefined값을 반환
+      var str = null; //object 타입의 null값
+
+      //정의되지 않은 변수에 접근하면 undefined값을 반환한다.
+      document.getElementById("result").innerHTML =
+        typeof num + "<br>" + typeof str + "<br>" + typeof secondNum;
+      //1. 초기화되지않음
+      //2. null값 - object타입
+      //3. 아예 생성안함 -> 타입 X
+    </script>
+  </body>
+</html>
+```
+
+### 7. 객체(Object)
+
+객체(Object)란 실생활에서 우리가 인식할 수 있는 사물로 이해할 수 있다.
