--- a/TCP_JavaScript/02_07.md
+++ b/TCP_JavaScript/02_07.md
@@ -220,3 +220,29 @@ var fourthStr = '나의 이름은 "홍길동"이야.';
 ### 7. 객체(Object)
 
 객체(Object)란 실생활에서 우리가 인식할 수 있는 사물로 이해할 수 있다.
+객체는 여러 프로퍼티(property)나 메서드(method)를 같은 이름으로 묶어놓은 **일종의 집합체**이다.
+
+```
+예제
+
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JavaScript DataType</title>
+  </head>
+  <body>
+    <h1>객체 타입</h1>
+    <p id="result"></p>
+    <script>
+      var dog = { name: "해피", age: 3 }; //객체의 생성
+      //객체의 프로퍼티를 참조
+      document.getElementById("result").innerHTML =
+        "강아지 이름은 " + dog.name + "이고, 나이는 " + dog.age + "살 입니다.";
+    </script>
+  </body>
+</html>
+
+배열..?같은 느낌이다
+```
