--- a/TCP_JavaScript/07_27.md
+++ b/TCP_JavaScript/07_27.md
@@ -36,3 +36,55 @@
 자바스크립트의 `기본 타입(data type)`은 `객체(object)`입니다.
 
 객체란 이름(name)과 값(value)으로 구성된 프로퍼티(property)의 정렬되지 않은 집합입니다.
+property의 값으로 함수가 올 수도 있는데, 이러한 property를 메서드(method)라고 한다.
+
+```
+예제
+
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JavaScript Object</title>
+  </head>
+  <body>
+    <h1>객체(Object)의 개념</h1>
+    <script>
+      var cat = "나비"; //일반적인 변수 선언
+      //객체도 많은 값을 가지는 변수의 하나이다.
+      var kitty = {
+        name: "나비",
+        family: "코리안 숏 헤어",
+        age: 1,
+        weight: 0.1,
+      };
+      document.write(cat + "<br>"); //cat변수 하나를 불려옴
+      document.write(kitty.name); //kitty객체 중 name변수 한개를 불러옴
+    </script>
+  </body>
+</html>
+```
+
+자바스크립트에서 number, string, boolean, undefined 타입을 **제외한 모든 것이 객체**이다.
+하지만 `number`, `string`, `boolean`과 같은 `원시 타입`은 값이 정해진 객체로 취급되어, **객체로서의 특징도 함께 가지게 된다**.
+
+---
+
+### 3. 객체의 프로퍼티 참조
+
+자바스크림트에서 객체의 property를 참조하는 방법은 다음과 같다.
+
+```
+문법
+
+- 객체이름.프로퍼티이름
+또는
+- 객체이름["프로퍼티이름"]
+```
+
+```
+예제
+
+
+```
