--- a/TCP_JavaScript/10_55.md
+++ b/TCP_JavaScript/10_55.md
@@ -14,7 +14,11 @@
 
 ### 1. alert() 메소드
 
-window 객체의 alert() 메소드는 사용자에게 **간단한 메세지를 보여주고, 그에 대한 사용자의 확인을 기다립니다.**
+window 객체의 alert() 메소드는 사용자에게 {
+"key": "ctrl+k ctrl+c",
+"command": "editor.action.addCommentLine",
+"when": "editorTextFocus && !editorReadonly"
+}**간단한 메세지를 보여주고, 그에 대한 사용자의 확인을 기다립니다.**
 
 ```
 문법
