--- a/TCP_JavaScript/07_30.md
+++ b/TCP_JavaScript/07_30.md
@@ -121,3 +121,52 @@ for / in 문은 객체의 모든 열거할 수 있는 프로퍼티(enumerable pr
   </body>
 </html>
 ```
+
+> Object.defineProperty()메서드는 ECMAScript 5부터 추가된 객체에 프로퍼티를 추가해주는 메서드이다.
+> 이 때 추가하는 프로퍼티의 속성까지도 설정할 수 있다.
+
+---
+
+### 객체간의 비교
+
+자바스크립트에서 **별개의 두 객체**는 **프로퍼티의 값이 모두 같아도, 절대로 같다고 말할 수 없다.**
+
+```
+예제
+
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JavaScript Object Handling</title>
+  </head>
+  <body>
+    <h1>객체간의 비교</h1>
+    <script>
+      function Dog(color, name, age) {
+        this.color = color;
+        this.name = name;
+        this.age = age;
+      }
+      //모든 property값이 같은 객체를 생성
+      var myDog = new Dog("흰색", "마루", 1);
+      var hisDog = new Dog("흰색", "마루", 1);
+      document.write((myDog == hisDog) + "<br>"); //false
+      document.write((myDog === hisDog) + "<br>"); //false
+
+      var herDog = hisDog; //hisDog객체를 변수 herDog에 대입.
+      document.write((hisDog == herDog) + "<br>"); //true
+      document.write((hisDog === herDog) + "<br>"); //true
+    </script>
+  </body>
+</html>
+```
+
+위의 예제에서 myDog과 hisDog객체는 **가지고 있는 property의 값이 모두 같다.**
+하지만 이 **두 객체는 별개의 객체**이므로, `동등(==) 연산자`와 `일치(===) 연산자`로 비교해도 모두 false를 반환한다.
+
+변수 herDog에 hisDog객체를 대입
+이렇게 **객체를 대입한 변수**를 **객체 레퍼런스(object reference)**라고 하며, 이제부터 **변수 herDog은 hisDog객체를 가리키게** 된다.
+즉, 객체 래퍼런스는 객체 자체를 저장하는 것이 아니라, **객체가 위치한 주소를 저장하는 것이다.**
+따라서 변수 herDog와 hisDog을 연산자와 일치 연산자로 비교하면, 모두 true를 리턴한다.
