--- a/itbank_java/17_09_28.md
+++ b/itbank_java/17_09_28.md
@@ -1,6 +1,6 @@
 - HashMap이나 List는 실제로 많이 사용되는 것이다.
 
-# 익명객체와 람다식
+# 22. 익명객체와 람다식
 
 ## 익명 객체
 
@@ -42,3 +42,55 @@ Y = f(x); 형태의 함수로 구성된 프로그래밍 기법
 
 자바의 람다식은 **함수의 인터페이스**의 익명 구현 객체를 대신한다.
 람다식(Lambda Exoression)은 코드블럭(code block)을 메서드에 넣을 때 사용하는 기술이다.
+
+**함수적 인터페이스란?**
+
+- **추상 메서드가 1개인 인터페이스**
+
+```
+public interface Say01 {
+    public void talking();
+}
+
+>>다음 Person객체 생성
+public class Person {
+    public void greeting(Say01 say) {
+        say.talking();
+    }
+}
+```
+
+```
+방법1 – 익명 객체 방법
+Person p = new Person();
+p.greeting(new Say01() {
+
+    public void talking() {
+    System.out.println("안녕");
+    }
+});
+
+방법1 – 람다식
+Person pp = new Person();
+pp.greeting( () -> { //()는 Say01
+System.out.println("안녕");
+});
+```
+
+---
+
+### 람다식을 적용하기 위한 스트림 소개
+
+**반복자 스트림이란?**
+
+- 자바 8부터 추가된 컬렉션의 저장 요소를 하나씩 참조하도록 도와주는 반복자이다.
+- 람다식으로 처리할 수 있도록 해주는 반복자입니다.
+- **파일 입출력 stream과는 다른 개념이다**
+
+**스트림의 특징**
+
+- Iterator와 비슷한 역할을 하는 반복자 이다.
+- 대부분 메서드는 **함수적 인터페이스** 타입 이다.
+- 속도면에서 빠르다
+
+**Stream**은 `중간처리`와 `최종처리`가 `함수형`으로 표현 가능하다.!!!
