--- a/itbank_java/16.md
+++ b/itbank_java/16.md
@@ -1,4 +1,4 @@
-# 21. API - IO(Input스트림 - Output스트림)
+# API - IO(Input스트림 - Output스트림)
 
 ## 스트림 이란?
 
@@ -80,108 +80,4 @@
 
 ---
 
-## 문자 기반 스트림
-
-**문자 기반 스트림 클래스**
-
-- Input/OutputStream은 1byte 단위로 입/출력 동작을 수행하지만 **한글의 경우 2byte**이기 때문에 바이트 단위 **처리시 글자가 깨질 수 있다.**
-- 이러한 문제점을 없애기 위해 자바에서는 문자나 문자열을 다룰 때 유니코드 방식을 제공하고 있다.
-- 유니코드를 사용하는 입/출력 클래스를 **Reader와 Writer**라고 부르며, 이들을 사용하면 자동으로 바이트가 **유니코드화 되므로 한글 같은 2byte 문자도 정상적으로 처리 할 수 있다.**
-
-- Character Sreams(문자 기반 최상위 클래스)
-  - Reader
-    - FileReader
-  - Writer
-    - FileWriter
-
----
-
-### 문자 기반으로 쓰는 Writer클래스
-
-#### Writer
-
-- 이 클래스는 텍스트 파일을 ㅍ로그램으로 쓸 때 사용하는 문자 기반 스트림이다/
-
-#### Writer 사용법
-
-- writer(추상)클래스를 이용해서 객체를 만든다. 하위 클래스로 구현 시킨다.
-- **2byte 문자도 정상적으로 처리할 수 있다.**
-
-#### Writer 주요 메서드
-
-- InputStream클래스와 거의 동일
-
----
-
-### 문자 기반으로 읽는 Reader클래스
-
-#### Reader
-
-- 이 클래스는 텍스트 파일을 프로그램으로 **읽을 때** 사용하는 **문자 기반 스트림**이다.
-- 문자 단위로 읽고 쓰기 때문에 텍스트가 아닌 **그림, 오디오, 비디오 등의 파일을 읽거나 쓸 수 없다**.
-
-#### Reader사용법
-
-- Reader(추상)클래스를 이용해서 객체를 만든다. 하위 클래스로 구현시킨다.
-- **2byte 문자도 정상적으로 처리 할 수 있다.**
-
-#### Reader 주요 메서드
-
-- OutputStream클래스와 거의 동일
-
----
-
-`09/28`
-
-# 21. API - IO(입출력 성능향상 보조 스트림)
-
-## 입출력 성능향상 스트림 BufferedWriter
-
-#### BufferedWriter
-
-- 이 클래스는 텍스트 파일을 프로그램을 **읽을 때** 사용하는 **문자 기반 스트림**이다.
-- 데이터를 읽고 **버퍼에 저장한 후 한번에 쓰는 형태**로 사용되기 때문에 **속도가 빠름**
-
-#### BufferedWriter 사용법
-
-- 생성자의 매개변수(**문자출력스트림 클래스**)를 전달한다.
-
-```
-Writer re = new FileWriter("쓸파일경로");
-BufferedWriter bw = new BufferedWriter(rt);
-```
-
-#### BufferedWriter 주요 메서드
-
-- Writer클래스와 거의 동일
-- flush(): 버퍼를 비운다.
-
-#### 주의할점
-
-버퍼가 가득찼을 때만 출력을 해내기 때문에 **flush()를 호출하여 잔류하는 데이터를 모두 보내야 합니다.**
-
----
-
-## 입출력 성능향상 스트림 BufferedReader
-
-#### BufferedReader
-
-- 이 클래스는 텍스트 파일을 프로그램으로 **읽을 때** 사용하는 **문자 기반 스트림**이다.
-- 데이터를 읽고 **버퍼에 저장한 후 한번에 읽는 형태**로 사용되기 때문에 속도가 빠르다.
-
-#### BufferedReader 사용법
-
-- 생성자의 매개변수(**문차출력스트림 클래스(FileReader)**)를 전달한다.
-
-```
-Reader rd = new FileReader("파일경로");
-
-BufferedReader bf = new BufferedReader(rd) ;
-
->> BufferedReader bf = new BufferedReader(new FileReader("파일경로"));
-```
-
-#### BufferedReader주요 메서드
-
-- Reader클래스와 거의 동일
-- **readLind(): 한 줄을 한꺼번에 읽어 들인다**.
+### 문자 기반 스트림
