--- a/TCP_JavaScript/02_08.md
+++ b/TCP_JavaScript/02_08.md
@@ -40,6 +40,159 @@
 ```
 예제
 
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JavaScript Type Conversion</title>
+  </head>
+  <body>
+    <h1>묵시적 타입 변환</h1>
+    <p id="result"></p>
+    <script>
+      var result = 10 + "문자열"; //문자열 연결을 위해 숫자 10이 문자열로 변환된다.
+      document.getElementById("result").innerHTML = result + "<br>";
+      result = "3" * "5"; //곱셈 연산을 위해 두 문자열이 모두 숫자로 변환된다.
+      document.getElementById("result").innerHTML += result + "<br>";
+      result = 1 - "문자열"; //NaN>>에러에러
+      document.getElementById("result").innerHTML += result;
+    </script>
+  </body>
+</html>
+```
 
+위의 세 번째 예제 `1 - "문자열` 에서 뺄셈 연산을 위해 문자열이 숫자로 변환되어야 하나, 해당 문자열은 두 번째 예제의 문자열과는 달리 숫자로 변환될 수 없는 문자열 이다.
+따라서 의미에 맞게 자동으로 타입을 변환할 수 없으므로, 자바스크립트는 NaN값을 반환한다.
+
+> NaN은 Not a Number의 축약형으로, 정의되지 않은 값이나 표현할 수 없는 값이라는 의미를 가진다.
+> 이러한 NaN은 Number 타입의 값으로 0을 0으로 나누거나, 숫자로 변환할 수 없는 피연산자로 산술 연산을 시도하는 경우에 반환되는 읽기전용 값이다.
+>
+> > 한마디로 이상한 값들처리용
+
+---
+
+### 명시적 타입 변환(explicit type conversion)
+
+자바스크립트에서는 묵시적 타입 변환을 많이 사용하지만, 명시적으로 타입을 변환할 방법도 제공한다.
+명시적 타입 변환을 위해 자바스크립트가 제공하는 전역 함수는 다음과 같다.
+
+1. Number()
+2. String()
+3. Boolean()
+4. Object()
+5. parseInt()
+6. parseFloat()
 
 ```
+예시
+
+<!DOCTYPE html>
+<html lang="ko">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>JavaScript Type Conversion</title>
+    </head>
+
+    <body>
+        <h1>명시적 타입 변환 함수</h1>
+        <p id="result"></p>
+        <script>
+            document.getElementById("result").innerHTML = Number("10") + "<br>"; //정수형 10
+            document.getElementById("result").innerHTML += String(true) + "<br>"; //문자열 true
+            document.getElementById("result").innerHTML += Boolean(0) + "<br>";
+            //>불리언 false, Boolean안의 값으로 기존의 값과 비교한다.
+            document.getElementById("result").innerHTML += Object(3);
+            //>new Number(3)와 동일한 결과로 숫자3을 출력
+        </script>
+    </body>
+
+</html>
+```
+
+---
+
+### 숫자를 문자열로 변환
+
+숫자를 문자열로 변환하는 가장 간단한 방법은 Strgin() 함수를 사용하는 것이다.
+또한, null과 undefined를 제외한 모든 타입의 값이 가지고 있는 toString()메서드를 사용할 수도 있다.
+
+숫자(Number)객체는 숫자를 문자열로 변환하는 다음과 같은 메서드를 별도로 제공한다
+
+1. toExponential() - 정수부분은 1자리, 소수부분은 입력받은 수 만큼 e표기법을 사용해서 숫자를 문자열로 변환
+2. toFixed() - 소수 부분을 입력받은 수 만큼 사용해서 숫자를 문자열로 변환
+3. toPrecision() - 입력받은 수만큼 유효자릿수를 사용하여 숫자를 문자열로 변환
+
+메서드(method)란 객체의 프로퍼티 값으로 함수를 갖는 프로퍼티를 의미한다.
+메서드는 [자바스크립트 객체의 개념수업](http://tcpschool.com/javascript/js_object_concept)에서 확인할 수 있다.
+
+---
+
+### 불리언 값을 문자열로 변환
+
+불리언값을 문자열로 변환하는 방법에는
+String()함수와
+toString()메서드를 사용하는 방법이 있다.
+
+```
+예제
+
+String(true); - 문자열 "true"
+false.toString(); - 문자열 "false"
+```
+
+---
+
+### 날짜를 문자열이나 숫자로 변환
+
+날짜를 문자열로 변환하는 방법에는
+String()함수와
+toString()메서드를 사용하는 방법이 있다.
+자바스크립트에서 날짜(Date) 객체는 **문자열과 숫자로 모두 변화할 수 있는 유일한 타입**이다
+
+날짜(Date) 객체는 날짜를 숫자로 변환하는 다음과 같은 메서드를 별도로 제공한다.
+
+1. getDate() - 일자를 숫자로 반환(1~31)
+2. getDay() - 요일을 숫자로 반환(일요일:0 ~ 토요일:6)
+3. getFullYear() - 연도를 4자리 숫자로 반환(yyyy년)
+4. getMonth() - 월을 숫자로 반환(1월:0 ~ 12월:11)
+5. getTime() - 1970년1월1일부터 현재까지의 시간을 밀리초 단위의 숫자로 반환
+6. getHours() - 시를 숫자로 반환(0시~23시)
+7. getMinutes() - 분을 숫자로 반환함(0분~59분)
+8. getSeconds() - 초를 숫자로 반환(0초~59초)
+9. getMilliseconds() - 초를 밀리초단위의 숫자로 반환(0~999)
+
+```
+예제
+
+<!DOCTYPE html>
+<html lang="ko">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>JavaScript Tupe Conversion</title>
+    </head>
+
+    <body>
+        <h1>날짜를 문자열이나 숫자로 변환</h1>
+        <p id="result"></p>
+        <script>
+            var result = String(Date());
+            document.getElementById("result").innerHTML = result + "<br>";
+            result = Date().toString();//문자열로 변환
+            document.getElementById("result").innerHTML += result + "<br>";
+            var date = new Date(); //Date객체 생성
+            result = date.getFullYear();//년도 4자리를 숫자로 반환
+            document.getElementById("result").innerHTML += result + "<br>";
+            result = date.getTime(); //1970/01/01 ~ 현재 시간을 밀리초 단위 숫자로 표시
+            document.getElementById("result").innerHTML += result;
+        </script>
+    </body>
+
+</html>
+```
+
+날짜 객체의 메서드에 대한 더 자세한 사항은 [자바스크립트 Date 메서드 수업](http://tcpschool.com/javascript/js_standard_dateMethod)에서 확인 가능하다.
