--- a/TCP_JavaScript/02_08.md
+++ b/TCP_JavaScript/02_08.md
@@ -2,6 +2,8 @@
 
 ## 08) 타입 변환(type conversion)
 
+> http://tcpschool.com/javascript/js_datatype_typeConversion
+
 자바스크립트는 타입 검사가 매우 유연한 언어입니다.
 자바스크립트의 변수는 타입이 정해져 있지 않으며, 같은 변수에 다른 타입의 값을 다시 대입할 수도 있다.
 
@@ -196,3 +198,31 @@ toString()메서드를 사용하는 방법이 있다.
 ```
 
 날짜 객체의 메서드에 대한 더 자세한 사항은 [자바스크립트 Date 메서드 수업](http://tcpschool.com/javascript/js_standard_dateMethod)에서 확인 가능하다.
+
+---
+
+### 문자열을 숫자로 변환
+
+문자열을 숫자로 변환하는 가장 간단한 방법은 `Number()함수`를 사용하는것 입니다.
+
+자바스크림트는 문자열을 숫자로 변환해 주는 두개의 전역함수를 별도로 제공한다.
+
+1. parseInt() - **문자열**을 파싱하여 특정 진법의 **정수**를 반환
+2. parseFloat() - **문자열**을 파싱하여 **부동 소수점** 수를 반환
+
+이 두 전역 함수에 대한 자세한 사항은 [자바스크립트 NUmber메서드 수업](http://tcpschool.com/javascript/js_standard_numberMethod)에서 확인 가능하다
+
+---
+
+### 불리언(Boolean)값을 숫자로 변환
+
+Boolean값을 숫자로 변환하는 방법에는 Number()함수를 사용하는 방법이 있다
+
+```
+예제
+
+Number(true); // 숫자 1
+Number(false); //숫자 0
+```
+
+> true = 1, false = 0 을 리턴한다
