--- a/TCP_JavaScript/02_09.md
+++ b/TCP_JavaScript/02_09.md
@@ -1,4 +1,4 @@
-# 2. 타입(Type)
+2.  타입(Type)
 
 ## 8) 변수
 
@@ -61,5 +61,59 @@ date = 25; //date라는 이름의 변수를 묵시적으로 선언
 ```
 예제
 
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JavaScript Variables</title>
+  </head>
+  <body>
+    <h1>같은 변수에 다른 타입의 값 할당</h1>
+    <p id="result"></p>
+    <script>
+      var num = 10; //변수의 선언과 함께 초기화 - Number
+      document.getElementById("result").innerHTML = num + "<br>";
+      num = [10, 20, 30]; //배열로 재할당
+      document.getElementById("result").innerHTML += num + "<br>";
+      var num; //이 재선언문은 무시된다.
+      document.getElementById("result").innerHTML += num;
+    </script>
+  </body>
+</html>
+```
+
+자바스크립트에서 선언만 되고 초기화하지 않은 변수는 undefined값을 가진다.
 
 ```
+예제
+
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JavaScrupt Variables</title>
+  </head>
+  <body>
+    <h1>초기화하지 않은 변수의 값</h1>
+    <p id="result"></p>
+    <script>
+      var num; //변수의 선언 - undefined
+      document.getElementById("result").innerHTML = num + "<br>"; //innerHTML = 문자열을 HTML타입으로 입력해준다
+      num = 10; //변수의 초기화 - 10
+      document.getElementById("result").innerHTML += num;
+    </script>
+  </body>
+</html>
+
+```
+
+---
+
+### 변수의 이름
+
+자바스크립트에서 변수의 이름을 가지고 식별하므로, **변수의 이름**이 바로 `식별자(identifier)`이다
+변수의 이름은 **영문자(대소문자), 숫자, 언더스코어(\_) 또는 달러(\$)로만 구성된다**
+또한, 숫자와의 구분을 빠르게 하려고 숫자로 이름을 시작할 수 없다.
+이러한 변수의 이름은 대소문자를 구분하며, 자바스크립트 언어세엇 예약된 키워드는 이름으로 사용할 수 없다. >>예약어는 사용이 불가능하다는 뜻
