--- a/TCP_JavaScript/03_10.md
+++ b/TCP_JavaScript/03_10.md
@@ -12,7 +12,7 @@ http://tcpschool.com/javascript/js_operator_arithmetic
 
 ---
 
-### 산술 연산자)(arithmetic operator)
+### 산술 연산자(arithmetic operator)
 
 산순 연산자는 사칙연산을 다루는 가장 기본적이며 많이 사용하는 연산자이다
 산술 연산자는 모두 **두 개의 피연산자**를 가지는 `이항 연산자`이며, 피연산자들의 **결합 방향은 왼쪽에서 오른쪽**이다.
@@ -20,8 +20,17 @@ http://tcpschool.com/javascript/js_operator_arithmetic
 > 항이란 해당 연산의 실행이 가능하기 위해 필요한 값이나 변수를 의미한다,.
 > 따라서 이항 연산자란 해당 연산의 실행을 위해서 두 개의 값이나 변수가 필요한 연산자를 의미한다.
 
-| 산술연산자 | 설명 |
-| ---------- | ---- |
+| 산술연산자 | 설명                                                    |
+| :--------: | :------------------------------------------------------ |
+|    `+`     | 왼쪽 피연산자에 오른쪽 피연산자를 더함                  |
+|    `-`     | 왼쪽 피연산자에 오른쪽 피연산자를 더함                  |
+|    `*`     | 왼쪽 피연산자에 오른쪽 피연산자를 곱함                  |
+|    `/`     | 왼쪽 피연산자를 오른쪽 피연산자로 나눔                  |
+|    `%`     | 왼쪽 피연산자를 오른쪽 피연산자로 나눈 나머지 값을 반환 |
+
+```
+예제
 
 
-- | 왼쪽에서 피연산자의 값에 오른쪽 연산자의 값을 더함
+
+```
