--- a/itbank_database/DB01.md
+++ b/itbank_database/DB01.md
@@ -1,3 +1,27 @@
+# 우선 실행
+
+alter user hr account unlock identified by hr;
+
+국기반연습CDB
+사용자이름 sys
+비밀번호 oracle
+롤 - 최고 관리자 원한 sysDBA(관리자 + 데이터베이스)
+ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
+
+국비반연습PDB
+사용자이름 sys
+비밀번호 oracle
+롤 - 최고 관리자 원한 sysDBA(관리자 + 데이터베이스)
+XEPDB1
+ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ
+https://coding-factory.tistory.com/10
+국기반연습HR계정
+사용자이름 hr
+비밀번호 hr
+XEPDB1
+
+---
+
 # 데이터베이스 소개
 
 https://dataonair.or.kr/
@@ -58,5 +82,3 @@ RDBMS - 관계형 데이터베이스
 - **외래키로 지정되면 참조 테이블의 기본키에 없는 값은 입력할 수 없음**
 
 > 슈퍼키 - 학번and과목명, 외래키 - 학번
-
-
