--- a/itbank_database/DB02.md
+++ b/itbank_database/DB02.md
@@ -136,7 +136,7 @@ WHERE 절은 열 일므, 비교 연산자, 그리고 비교할 열 이름 또는
 
 ---
 
-### LIKE 연산자
+### LIKE 연산자🤔 - 글을 검색 시 이용한다
 
 검색 스트링 값에 대한 와일드카드 검색을 위해 LIKE연산자를 사용한다
 검색 조건은 리터럴 문자나 숫자를 포함할 수 있다.
