--- a/itbank_database/DB03.md
+++ b/itbank_database/DB03.md
@@ -1,4 +1,4 @@
-# 03. 함수
+# Chapter 03
 
 - 함수
 - 문자 조작 함수
@@ -6,6 +6,8 @@
 - 날짜 함수
 - 변환 함수
 - 집합 연산자
+
+## 함수
 
 함수는 SQL의 아주 강력한 특징이며 다음을 위해 사용할 수 있다.
 
@@ -15,4 +17,96 @@
 - 출력을 위한 날짜와 숫자 형식 설정
 - 열의 데이터 타입 변환
 
-![function](https://github.com/JaeHyun-Ban/image/blob/master/Database/03.function.jpg)
+![function01](https://github.com/JaeHyun-Ban/image/blob/master/Database/03.function.jpg)
+
+---
+
+### 함수의 종류
+
+- 단일 행 함수
+  - 이러한 함수는 오직 단일 행에서만 적용 가능하고 행별로 하나의 결과를 리턴한다
+  - 단일 행 함수에는 여러 유형들이 있다.
+    - 문자
+    - 숫자
+    - 날짜
+    - 변환
+- 다중 행 함수
+  - 이러한 함수는 복수의 행을 조작하여 행의 그룹당 하나의 결과를 리턴한다
+
+![function02](https://github.com/JaeHyun-Ban/image/blob/master/Database/03.function02.jpg)
+
+---
+
+### 단일 행 함수
+
+---
+
+## 문자 조작 함수
+
+---
+
+### 문자열 함수
+
+---
+
+### LOWER, INITCAP, UPPER
+
+데이터의 대/소문자 구분이 명확하지 않을 경우 `WHERE`조건절에 `LOWER`혹은 `UPPER`함수가 유용하게 사용될 수 있다.
+
+---
+
+### LENGTH, INSTR
+
+`LENGTH`는 **문자열의 길이**를 반환한다. `INSTR`은 주어진 **문자의 위치**를 반환한다.
+
+```
+# 예제
+
+SELECT first_name, LENGTH(first_name), INSTR(first_name, 'a')
+FROM employees;
+```
+
+first_name의 길이, first_name에서 문자'a'의 위치를 반환 한다
+
+---
+
+### SUBSTR, CONCAT
+
+`SUBSTR`은 주어진 문자열에서 주어진 시작 위치에서 지정한 개수만큼 부분 문자열을 반환한다.
+`CONCAT`함수는 두 문자열을 연결한다
+
+```
+# 예제
+
+SELECT first_name, SUBSTR(first_name, 1, 3), CONCAT(first_name, last_name) FROM employees;
+```
+
+---
+
+### LPAD, RPAD
+
+`LPAD`는 왼쪽, `RPAD`는 오른쪽에 **남은 부분**을 문자로 채워줍니다.
+`LPAD함수`는 정의된 문장의 **왼쪽 나머지 공간**을 지정한 문자로 채웁니다.
+`RPAD함수`는 정의된 문장의 **오른쪽 나머지 공간**을 지정한 문자로 채웁니다.
+
+---
+
+### LTRIM, RTRIM
+
+`LTRIM`함수는 정의된 문자열의 **왼쪽부터 지정된 단어가 발견되면 제거**한다
+`RTRIM`함수는 정의된 문자열의 **오른쪽부터 지정된 단어가 발견되면 제거**한다
+제거하는 **문자를 지정하지 않으면 공백을 제거**한다.
+
+---
+
+### REPLACE🤔, TRANSLATE
+
+`REPLACE`함수는 **정의된 문자열**에서 **지정한 문자열**을 새로운 문자열로 대체합니다.
+이를 이용하면 **정의된 문자열에 포함되어 있는 공백을 제거**할 수 있다.
+`TRANSLATE`함수는 정의된 문자열을 1대1로 대응시킨다
+
+---
+
+#### 메모장
+
+SQL은 안쓰면 까먹으니 최대한 머릿속에 연계해서 잘 남겨놓을 것
