--- a/itbank_database/DB03_1.md
+++ b/itbank_database/DB03_1.md
@@ -1,15 +1,17 @@
 ## 숫자 함수
 
-🤔`ROUND(column|expression, n)` - 소수점 n자리까지 반올림한다, n이 없다면 소수점이 없어진다
-🤔`TRUNC(column|expression, n)` - 소수점 n자리까지 절삭한다, n이 없다면 소수점이 없어진다
-
----
+🤔`ROUND(column|expression, n)` - 소수점 n자리까지 **반올림**한다, n이 없다면 소수점이 없어진다
+🤔`TRUNC(column|expression, n)` - 소수점 n자리까지 **절삭**한다, n이 없다면 소수점이 없어진다
 
 ### ROUND🤔
 
-`ROUND`함수는 열, 표현식 또는 값을 소수점 n자리로 반올림 한다.
+`ROUND`함수는 열, 표현식 또는 값을 소수점 n자리로 **반올림** 한다.
 두 번째 인자가 0이거나 생략되면, 값은 소수점 위치가 0으로 반올림 된다.
 두 번째 인자가 2이면, 값은 소수점 아래 두 번째 위치로 반올림 된다.
+
+### TRUNC
+
+`TRUNC`함수는 소수점 N 자리로 **절삭**한다.
 
 ---
 
@@ -28,6 +30,8 @@
 - 날짜에서 숫자를 더하거나 빼 날짜 결과를 반환한다.
 - 날짜 사이의 **일(DAY)수**를 알기 위해 두 개의 날짜를 뺀다.
 - 시간을 24로 나누어 날짜에 더한다.
+
+데이터베이스는 날짜를 **숫자로 저장**하므로, 더하기 빼기같은 산술 연산자를 사용하여 계산을 수행할 수 있다.
 
 ---
 
