--- a/itbank_database/DB03_0.md
+++ b/itbank_database/DB03_0.md
@@ -39,6 +39,25 @@
 
 ### 단일 행 함수
 
+- 데이터 값을 조작한다
+- 인수(argument)를 받고 하나의 결과를 리턴한다
+- 리턴될 각각의 행에 적용된다.
+- 행별로 하나의 결과를 리턴한다
+- 데이터타입을 수정할 수 있다.
+- 중첩(nested)될 수 있다.
+
+---
+
+### 단일행 함수 종류
+
+- 단일 행 함수 종류에는 `문자 함수`, `숫자 함수`, `날짜 함수`, `변환 함수`등이 있다.
+- 문자 함수는 문자 입력을 받고 문자와 숫자 값 모두를 리턴할 수 있다.
+  - 숫자 함수는 숫자 입력을 받고 숫자 값을 리턴한다.
+  - 날짜 함수는 날짜 데이터타입의 값에 대해 수행한다.
+  - 숫자를 리턴하는 MONTHS_BETWEEN 함수를 제외한 모든 날짜 함수는 날짜 데이터 타입의 값을 리턴한다.
+  - 변환 함수는 어떤 데이터타입의 값을 다른 데이터 타입의 값으로 변환한다.
+  - 그 외 함수에는 `NVL`, `NVL2`, `LNNVL`, `NULLIF`, `COALESCE`, `DECODE`등이 존재한다.
+
 ---
 
 ## 문자 조작 함수
@@ -46,6 +65,15 @@
 ---
 
 ### 문자열 함수
+
+- `LOWER(컬럼)`: 모두 소문자로 출력
+- `UPPER(컬럼)`: 모두 대문자로 출력
+- `INITCAP(컬럼)`: 첫글자를 대문자로 출력
+  > 데이터의 대/소문자 구분이 명확하지 않을 경우 WHERE 조건절에 LOWER 또는 UPPER함수가 유용하게 사용될 수 있다.
+- `LENGTH(컬럼)`: 문자열의 길이를 반환
+- `INSTR(컬럼, 문자)`: 주어진 문자의 위치를 반환
+- `SUBSTR(컬럼, 시작, 개수)`: 컬럼을 시작위치에서 지정한 개수만큼 부분의 문자열을 반환
+- `CONCAT(컬럼1, 컬럼2) `:두 문자열을 연결한다
 
 ---
 
