--- a/itbank_database/BD06.md
+++ b/itbank_database/BD06.md
@@ -23,7 +23,6 @@ WHERE조건에 SELECT 조건문을 소괄호로 묶어서 사용한다
 
 - 서브쿼리는 괄호로 둘러싸야 한다
 - 서브쿼리는 비교 연산자의 오른쪽에 있어야 한다
-- 서브쿼리는 ORDER BY절을 포함할 수 없다
 
 ---
 
@@ -45,3 +44,23 @@ WHERE조건에 SELECT 조건문을 소괄호로 묶어서 사용한다
   - `< ALL`: 가장 작은 값보다 작아야 된다
   - `> ALL`: 가장 큰 값보다 커야 한다
   - `= ANY`: IN과 같은 역할을 한다.
+
+---
+
+## 스칼라(Scalar) 서브쿼리
+
+`SELECT`절에 **사용**하는 서브쿼리이다.
+특히 `JOIN`을 수행할 시 조인할 행의 수를 줄여 성능을 향상시켜준다
+
+---
+
+## 인라인 뷰(Inline View)★★★
+
+`FROM절`에 서브쿼리가 온 것을 인라인 뷰 라고 한다.
+서브쿼리를 FROM절에 사용해 하나의 테이블 또는 뷰처럼 사용할 수 있다.
+
+> 인라인 뷰를 이용할 때 미리 정렬을 해놓으면 편리하다
+
+---
+
+#### 메모장
