--- a/TCP_JavaScript/03.Operator/03_10.md
+++ b/TCP_JavaScript/03.Operator/03_10.md
@@ -31,6 +31,30 @@ http://tcpschool.com/javascript/js_operator_arithmetic
 ```
 예제
 
-
-
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JavaScript Operators</title>
+  </head>
+  <body>
+    <h1>산술 연산자</h1>
+    <script>
+      var x = 10, y = 4;
+      document.write(x + y + "<br>"); //14
+      document.write(x - y + "<br>"); //6
+      document.write(x * y + "<br>"); //40
+      document.write(x / y + "<br>"); //2.5
+      document.write(x % y);//2
+    </script>
+  </body>
+</html>
 ```
+
+---
+
+### 연산자 우선순위(operator precedence)와 결합 방향(associativity)
+
+연산자의 우선순위는 수식 내에 여러가지 연산자가 함께 등장할 때, 어느 연산자가 먼저 처리될 것인가를 결정한다.
+일반적인 수학처럼 우선순위를 가지고 좌 -> 우로 계산, `=`는 오른쪽에서 왼쪽으로 결합해준다
