--- a/itbank_database/DB06.md
+++ b/itbank_database/DB06.md
@@ -49,17 +49,19 @@ WHERE조건에 SELECT 조건문을 소괄호로 묶어서 사용한다
 
 ## 스칼라(Scalar) 서브쿼리
 
-`SELECT`절에 **사용**하는 서브쿼리이다.
+`SELECT`절에 서브쿼리가 온 것이다
 특히 `JOIN`을 수행할 시 조인할 행의 수를 줄여 성능을 향상시켜준다
 
 ---
 
 ## 인라인 뷰(Inline View)★★★
 
-`FROM절`에 서브쿼리가 온 것을 인라인 뷰 라고 한다.
+`FROM절`에 **서브쿼리가 온 것**을 인라인 뷰 라고 한다.
 서브쿼리를 FROM절에 사용해 하나의 테이블 또는 뷰처럼 사용할 수 있다.
 
 > 인라인 뷰를 이용할 때 미리 정렬을 해놓으면 편리하다
+
+**추후 게시판 페이징에 이용가능한 알아두어야 하는 쿼리중 하나이다**
 
 ---
 
