--- a/itbank_database/DB10.md
+++ b/itbank_database/DB10.md
@@ -9,6 +9,8 @@
   - `FOREIGN KEY`: 열과 참조된 테이블의 열 사이의 외래키 관계를 적용하고 설정
   - `CHECK`: 참이어야 하는 조건을 지정
 
+한번 생성된 제약조건은 수정 X
+
 ---
 
 # 제약조건 종류
@@ -16,3 +18,13 @@
 ---
 
 # 제약조건 관리
+
+제약조건의 추가 또는 삭제는 가능하다. 하지만 수정은 불가능하다.
+
+## pk추가
+
+alter table (테이블이름) add constraints (조건이름생성) primary key (컬럼);
+
+## fk추가
+
+alter table (테이블이름) add constraints (조건이름생성) foreign key (컬럼) references 참조테이블(컬럼명)
