--- a/itbank_database/db13.md
+++ b/itbank_database/db13.md
@@ -23,15 +23,81 @@
 - m01.jpg
   관계란 Entity 와 Entity사이를 그리는 것 인데 `PK`, `FK`로 연결된다
 
+Cardinality(관계 대응수): 엔티티와 엔티티의 관계 대수
+`사원증 : 직원` = `1 : 1` - 직원에게 사원증은하나, 사원증은 지구언에게 하나
+`부서 : 직원` = `1 : N` - 부서에게 직우너은 여러명, 직원에게 부서는 하나
+`자격증 : 직원` = `N : M`- 직원에게 자격증은 여러개, 자격증에게 직원은 여러명일 수 있다
+
+Optionlity - 엔티티와 엔티티의 필수, 옵션을 표기
+`부서 : 직원` = `1 : N` - 부서에게 직원은 옵션이다, 직원에게 부서는 필수다.
+
+### 1 : N의 관계
+
+**N관계에 Foreign KEY를 추가한다**
+
+- 다수인 쪽에 FK를 추가해 주면 된다는 말이야
+
+### 1 : 1의 관계
+
+사실상 1:1관계는 테이블이 안나눠져도 괜찮음, **FK를 어느쪽에 넣어주어도 상관이 없다**
+그래도 일반적으로는 **서브관계가 되는 테이블에 FK를 추가해준다**(ex> 회원 - 관리자 = 관리자에 FK추가)
+
+또한 하나로 합쳐져도 되는 테이블이다
+
+관리자는 회원 = 필수, 회원은 관리자 = 옵션
+
+- 회원에게 관리자(기능)은 옵션이다
+
+### M : N관계(다수:다수)
+
+다수 : 다수의 관계는 **큰 문제**를 발생시킬 수 있다.
+그래서 양 테이블 사이에 **관게를 정리할 맵핑테이블을 생성**한다.
+생성한 맵핑테이블에는 양 테이블의 PK를 저장해 주고, 두 키를 슈퍼키로 묶어서 관리해 주면 된다.
+
+- ex) 회원 : 강의
+  - 회원 - `강의신청(맵핑테이블)` - 강의
+  - 강의신청의 회원 = 필수, 회원의 강의신청 = 옵션
+  - 강의신청의 강의 = 필수, 강의의 강의신청 = 필수
+
 ---
 
 ## 논리적 데이터 모델링
 
 `관계형 데이터 베이스에 맞게 끔 표로 전환 작업`
-가장 어려운 단계
+**가장 어려운 단계**
+
+```
+이클립스에서 Install New Software로 ERMaster를 설치해준다.
+```
 
 ---
 
 ## 물리적 데이터 모델링
 
 `데이터 베이스를 선택하고, 실체 표를 생성`
+
+물리적 데이터 모델링 단계에서는 FK를 생성하지 않는데
+그 이유는 생성하다가 참조를 수정하려면 관계를 맺고있는 모든테이블에서 지워야하기 떄문이다.
+
+---
+
+## 메모장
+
+### ER Master
+
+이클립스에서 Install New Software로 ERMaster를 설치
+새로운 JavaProject를 생성한 후 erm파일을 생성
+
+표 위에다가 선택을 누른뒤 드래그해서 테이블 생성
+생성한 테이블을 더블클릭해서 설정
+
+- 01.jpg
+
+regdate의 기본값을`--현재일자--`로 작성해준다
+
+기존 컬럼을 사용한 관계를 클릭 후 member -> board로 클릭
+
+관계정보 표시 선을 클릭 후 다중성이 `1`이라면 필수, `1,n`은 여러개라는 뜻이다
+
+- N:N관계로 생성하면 알아서 맵핑테이블을 생성해준다
+- 맵핑테이블에느 모두PK를 설정해준다
