--- a/itbank_database/DB12.md
+++ b/itbank_database/DB12.md
@@ -34,6 +34,10 @@
 **롤**은 사용자에 대해 부여될 수 있는 **관련 권한의 그룹**이다.
 예를 들어 일반사용자용 롤을 생성한다면 편하게 사용할 수 있을 것이다.
 
+EX)
+이름: 기본 권한
+권한: 접속, 테이블생성, 삭제.....등등
+
 ---
 
 # 비밀번호변경
