--- a/itbank_database/db13.md
+++ b/itbank_database/db13.md
@@ -66,9 +66,27 @@ Optionlity - 엔티티와 엔티티의 필수, 옵션을 표기
 `관계형 데이터 베이스에 맞게 끔 표로 전환 작업`
 **가장 어려운 단계**
 
-```
-이클립스에서 Install New Software로 ERMaster를 설치해준다.
-```
+### 논리적 모델링 - 테이블 정규화
+
+정규화 과정을 진행할수록 원자단위까지 쪼개진다
+
+#### 제 1정규화
+
+- 도메인이 원자값
+
+#### 제 2정규화
+
+- 부분적 함수 종속 제거
+
+#### 제 3정규화
+
+- 이행적 함수 종속 제거
+  pk가 아닌 값들이 다른 컬럼에 참조되어 있으면 안된다
+
+#### BCNF
+
+- 결정자가 키 값이어야 함(보통 1정규화 과정에서 Cardinality를 생각하면 완료 된다)
+- 여기까지오면 원자분해됨?
 
 ---
 
@@ -101,3 +119,12 @@ regdate의 기본값을`--현재일자--`로 작성해준다
 
 - N:N관계로 생성하면 알아서 맵핑테이블을 생성해준다
 - 맵핑테이블에느 모두PK를 설정해준다
+
+---
+
+# quiz01
+
+상품
+배송지
+주문상세
+주문이력
