--- a/Gookbe/JSP/01.md
+++ b/Gookbe/JSP/01.md
@@ -1,62 +1,49 @@
-# JDBC
+# 웹 프로그래밍이란?
 
-Java Data Base Connection
-ex) 기상청 -> 문자보내는회사 -> DB
-이런 느낌???
+1개이상의 사이트가 연결되어 있는 인터넷 서비스의 한가지 형태
+인터넷이란 **네트워크가 연결되어 있는 형태**
 
-내꺼에서 내 데이터베이스를 잘 찾아서 값을 집어넣자
+## JSP 웹어플리케이션의 장점
 
----
+풍부한 javaAPI를 이용 가능
+JSP기반의 웹어플리케이션은 특정 운영체제가 아니더라도 호환성의 문제가 없음
+실제 코드가 노출되지 않기 때문에 보안상 장점
 
-## JDBC(Java Database Connectivity)
+## URL
 
-- JDBC란 자바프로그램에서 SQL문을 실행하여 데이터를 관리하기 위한 자바 API이다
-- 데이터베이스에 대해서 별도의 프로그램을 만들 필요 없이, 해당 데이터베이스의 JDBC를 이용하면 하나의 프로그램으로 데이터베이스를 관리할 수 있다.
-- 오라클 사용시 Ojdbc를 사용한다.
-  `jar파일 = 만들어진 라이브러리`
+`http://192.110.32.11:8080/`
 
-## JDBC 실행순서
+1.**프로토콜(protocol)**: 네이트워크 상에서 약속한 통신규약(HTTP, FTP, SMTP, POP, DHCP)
 
-Oracle 드라이버 로딩 `Driver loading` Class.forName("드라이버 이름");
-Java와 Oracle 연결 `Connection` con = DriverManager.getConnection(url, id, pw);
-query전송 객체 `Statement` stmt = con.createStatement();
-query 작성 `query` Stringsql = "SELECT \* FROM member";
-query 전송 `run` res = stmt.executeQery(sql);
+- DHCP: IP주소 할당을 동적으로 수행
 
----
+2. **IP주소**: 네트워크상에서 특정 컴퓨터를 식별할 수 있는 주소
 
-## ojdbc활용하기
+3. **Port 번호**: IP주소가 컴퓨터를 식별할 수 있게 해준다면, 포트 번호는 해당 컴퓨터의 구동되고 있는 **프로그램을 구분할 수 있는 번호**
 
-oracle홈페이지 > ojdbc8 다운로드 - lib폴더에 추가 > lib폴더에 추가한 것을 빌드패스에 적용
+4. **DNS(도메인)**: IP주소를 인간이 쉽게 외우도록 맵핑한 문자열
 
----
+`http://www.google.com:80/index.html`
 
-### JDBC Select
-
-String 변수에 연결할 주소, 아이디, 비밀번호를 변수로 생성. > 주소는 DB의 환경에 따라 다르다
-
-Stirng sql에 필요한 값을 출력할 sql구문을 저장한다.
-
-연결객체, 결과를 담을 객체를 null값으로 미리 생성한다.
-
-try~catch구문을 만들고 안에다 작성해준다
-
-- 사용할 드라이버를 클래스로더에 생성
-
-- 연결객체를 주소,아이디,비밀번호를 통해 생성해준다
-
-- sql구문 쿼리를 전달하기위한 statement객체를 connection을 통해 sql 변수로 생성해준다
-
-- SQL문을 실행 하고 결과를 담아 줄 resultSet문을 생성
-
-- Set의 특성을 이용 next()로 값을 한줄씩 뽑아낸다
-
-  > 이는 while을 이용해서 사용한다
-
-- rs에서 get자료형을 통해 변수에 담아주고
-
-- 출력문으로 입력해 한줄씩 출력해준다
+- http = protocol
+- www = 인터넷 서비스 구분
+- google.com = 도메인
+- 80 = prot번호
+- index.html = 경로
 
 ---
 
-### JDBC Insert
+## HTTP 요청과 응답(중요!)
+
+- 클라이언트 : 접속해주는 환경
+- 브라우저가 서버의 페이지에 **요청(request)**하면 서버는 해당 파일을 찾아서 HTTP**응답(response)**을 통해 사용자의 요청을 처리한다
+
+---
+
+# memo
+
+아직까지 우리나라에선 어른분들이 `익스플로어`를 많이 사용해서 이를 고려해서 만들어야한다.
+
+톰캣을 이클립스에 적용 후 해줘야 할 사전 작업
+
+- jsp01.jsp
