--- a/TCP/JavaScript/03.Operator/03_13.md
+++ b/TCP/JavaScript/03.Operator/03_13.md
@@ -1,4 +1,4 @@
-# 13. 비교연산자
+# 비교연산자(comparison operator)
 
 비교연산자는 피연산자 사이의 상대적인 크기를 판단해서 true(참)과 false(거짓)을 반환한다.
 비교 연산자는 모두 두 개의 피연산자를 가지는 이항 연산자이며, 피연산자들의 결합 방향은 **왼쪽에서 오른쪽**이다
@@ -31,6 +31,40 @@
       document.write((x > y) + "<br>"); //y값이 x값보다 크므로 false
       document.write((a <= b) + "<br>"); //알파벳 순서상 `a`가 `b`보다 먼저니까 `b`가 더 큼
       document.write(x < a); //x값은 숫자고, a값은 문자니까 비교할 수 없다
+    </script>
+  </body>
+</html>
+```
+
+---
+
+# 동등 연산자와 일치 연산자
+
+동등 연산자(--, equal)와 일치 연산자(===, strict squal)는 모두 두 개의 피 연산자가 서로 같은지를 비교해준다.
+두 연산자 모두 피연산자의 타입을 가리지는 않지만, 그 같음을 정의하는 기준이 조금 다르다.
+
+**동등 연산자(==)**는 두 피연산자의 `값이 서로 같으면` 참(true)를 반환
+이때 두 피연산자의 타입이 서로 다르면, **비교를 위해 강제로 타입을 같게 변환**
+**일치 연산자(===)**는 타입읩 변화 없이 두 피연산자의 값이 같고, 타입도 같아야하먄 참(true)를 반환
+
+```
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JavaScript Operators</title>
+  </head>
+  <body>
+    <h1>동등 연ㅅ나자와 일치 연산자</h1>
+
+    <script>
+      var x = 3,
+        y = "3",
+        z = 3;
+      document.write((x == y) + "<br>"); //x와 y의 타입은 다르지만 동등연산자가 타입을 같게해서 비교한다.
+      document.write((x === y) + "<br>");
+      document.write(x === z);
     </script>
   </body>
 </html>
