--- a/Gookbe/JSP/02.md
+++ b/Gookbe/JSP/02.md
@@ -13,6 +13,52 @@ MVC패턴에서 View로 이용됨
 ★표현식(expression): `<%= %>` - 결과 값을 출력할 때 사용
 주석(comments): `<%-- --%>` - 코드 주석처리시에 사용
 
+---
+
 ### ★스크립트릿(scriptlet)
 
 JSP에서 JAVA언어를 사용하기 위한 요소 중 **가장 많이 사용**하는 태그이다.
+
+---
+
+### 선언자(declaration)
+
+JSP페이지 내에서 사용되는 변수 또는 메서드를 선언할 때 사용한다
+이곳에 선언된 변수 및 메서드는 **전역의 의미(멤버변수)**로 사용된다
+
+---
+
+### ★표현식(Expression)
+
+JSP페이지 내에서 사용되는 변수의 값, 메서드 호출결과 값을 출력하기 위해 사용된다
+(out.println을 대신해서 사용한다)
+
+세미콜론이 없어 불러서 바로 뽑아내 사용하는것이다
+
+---
+
+### 지시자(directive)
+
+JSP페이지의 전체적인 속성을 지정할 때 사용한다.
+
+1. page: JSP페이지에 대한 정보를 지정한다. 필효로하는 정보를 설정한다.
+2. include: JSP페이지의 특정 영역에 다른 문서를 포함시킨다
+3. taglib: JSP페이지에서 사용할 태그 라이브러리를 지정한다.
+
+다른 페이지를 현재 페이지로 통째로 가져온 것처럼 하는 기능이 있다.
+
+---
+
+## JSP 아키텍쳐
+
+jsp파일을 실행하면 웹 서버에서 우선 JSP파일을 JAVA코드로 변환한다.
+그 이후 그 파일을 컴파일하고 html로 응답한다
+
+**톰캣서버가 모든걸 날려준다**
+
+톰캣 폴더 속 logs 폴더를 확인하면 알 수 있다.
+
+---
+
+왓스(WebApplicationServer)WAS = 톰캣돌려
+apps - 프로젝트ㅡ이 복사본이 들어가는 곳
