--- a/Gookbe/JSP/02.md
+++ b/Gookbe/JSP/02.md
@@ -7,7 +7,7 @@ MVC패턴에서 View로 이용됨
 
 ## JSP 태그
 
-★스크립트릿(scriptlet): `<% %>` - 모든 자바 코드 기술 가능
+★스크립트릿(scriptnlet): `<% %>` - 모든 자바 코드 기술 가능
 ★지시자(driective): `<%@ %>` - 페이지 속성을 지정
 선언자(declaration): `<%! %>`- 변수나 메서드 선언 시 사용
 ★표현식(expression): `<%= %>` - 결과 값을 출력할 때 사용
