--- a/Gookbe/JSP/04★.md
+++ b/Gookbe/JSP/04★.md
@@ -1,12 +1,59 @@
 # JSP 내장 객체★
 
-## Requset
+개발자가 JSP파일 내에 객체를 생성하지 않고 바로 사용할 수 있는 객체가 내장 객체이다.
+JSP에서 제공되는 내장객체는 JSP컨테이너에 의해 서블릿으로 변환될 때 자동으로 객체가 생성된다.
+
+```
+ex)
+- 웹컨테이너(tomcat) 안에는 이런 내장객체들을 가지고 있다.
+  - Request
+  - Response
+  - out
+  - session
+  - application
+내장객체들은 new를 통해 생성하지 않고 바로 사용할 수 이다.
+```
+
+## Requset(내장객체)
 
 자동으로 생성되는 첫번 째 객체
 브라우저에서 오는 모든것을 request 객체에 담아서 보낸다
 
-## Response
+### 주요 메서드
+
+**getContextPath()** - String리턴, 웹 어플리케이션의 컨텍스트 루트경로를 얻음
+
+---
+
+## Response(내장객체)
 
 응답을 담아서 보내는 바구니 - Response
 
-## Out
+## 사용방법
+
+getCharacterEncoding() - 응답할 때의 문자의 인코딩 형태를 구한다.
+★addCookie(Cookie c) - 쿠기를 지정합니다
+★sendRedirect(URL)★ - 지정한 URL로 이동합니다
+
+---
+
+## Out(내장객체)
+
+JSP 페이지가 생성하는 모든 내용은 **out 기본 객체를 통해 전송된다**
+JSP페이지 안에서 사용하는 비스크립트 요소들(HTML코드, 텍스트)이 **out객체로 전달된다**
+값을 출력하는 포현식(expression)의 결과값도 out객체로 전달된다.
+★표현식을 대체한다
+
+서블릿에서도 out을 통해 브라우저에 필요한 것을 띄울 수 있다.
+하지만 그저 `out`을 통해 전달해 주기만 하면 브라우저가 알아서 해석할 수 없다
+
+그렇기 때문에 contentType을 지정해서 힌트를 알려주어야 한다
+
+참고: https://velog.io/@aerirang647/MIME-type%EC%9D%B4%EB%9E%80
+
+---
+
+- jsp01.jpg
+  favicon - 인터넷창에 나오는 조그만 그림
+
+- network의 modules에서 접속경로를 바꿀 수 있다.
