--- a/Gookbe/JSP/06.md
+++ b/Gookbe/JSP/06.md
@@ -36,8 +36,8 @@ JSP에서 쿠키보다는 `세션`이 더 보안적으로 좋다
 
 - ★setAttribute() - 세션에 데이터를 저장
 - ★getAttribute() - 세션에 저장된 데이터를 얻음
-- getAttributeNames() -
-- getId() -
+- getAttributeNames() - 세션에 저장되어 있는 모든 데이터 세션의 이름(key)를 얻음
+- getId() - 자동생성된 세션의 유니크한 아이디
 - ★removeAttribute() - **특정 세션**을 삭제
 - ★invalidate() - 모든 세션 삭제(유지중인 모든 세션)
 
@@ -50,6 +50,9 @@ JSP에서 쿠키보다는 `세션`이 더 보안적으로 좋다
 ## 생명주기
 
 - application은 프로그램 전체에서 **딱 한번**최초 가동시 생성된다
+- 톰캣서버가 종료되기 전 까지 어플리케이션은 유지된다
+  > 브라우저를 껏다 켜도 톰캣을 끄지 않는 이상 어플리케이션은 죽지않는다
+  > 영화 좌석예매를 만들어 보았다
 
 ---
 
@@ -81,3 +84,5 @@ http는 커넥션리스(connextionless)통신이라고 함
 이러한 각 서버마다 세션을 묶어서 관리해주는 `세션클러스터링`이란 기능도 존재한다.
 
 네이버나 다음같은 포털사이트는 쿠키는 여러 도메인에서 공유할 수 잇다는 점을 이용해 로그인방식을 쿠키에 저장하는 것을 선호한다.
+
+어플리케이션은 많이 사용되는 형식은 아니라고 한다
