--- a/Gookbe/JSP/13.md
+++ b/Gookbe/JSP/13.md
@@ -44,3 +44,17 @@ alter table users add CONSTRAINT users_pk PRIMARY KEY (id);
 ---
 
 비밀번호는 단방향 암호라 한번입력된 값을 다시는 찾을수 없어서 항상 비밀번호는 재발급하는것이다
+
+---
+
+## MVC패턴1
+
+---
+
+## MVC패턴2
+
+모든 요청들을 컨트롤러(서블릿)으로 보내서 처리 시켜준다.
+단순한 페이지 이동이라도 컨트롤러(서블릿)을 통해서 이동해야한다
+
+> ex) 로그인화면 -> 컨트롤러 > 홈화면
+> ![mvc2](https://developer.ucsd.edu/_images/mvc.png)
