--- a/Gookbe/JSP/13.md
+++ b/Gookbe/JSP/13.md
@@ -58,3 +58,5 @@ alter table users add CONSTRAINT users_pk PRIMARY KEY (id);
 
 > ex) 로그인화면 -> 컨트롤러 > 홈화면
 > ![mvc2](https://developer.ucsd.edu/_images/mvc.png)
+
+FrontController를 생성해서 사용해주어야 한다
