--- a/info/01.md
+++ b/info/01.md
@@ -56,3 +56,12 @@ sys ad sysdba 입력 > 비밀번호 > 로그인 성공
 ---
 
 https://www.w3schools.com/
+
+---
+
+```
+EX)
+<option value="10" ${pageVO.amount == 10 ? 'selected' : '' }>10개씩 보기</option>
+```
+
+**3항 연산식**을 통해서 조건 성립시 html에 필요한 조건 단어를 집어넣을 수 있다
