--- a/TCP/JavaScript/03.Operator/03_16.md
+++ b/TCP/JavaScript/03.Operator/03_16.md
@@ -1,8 +1,8 @@
-16. 기타 연산자
+# 기타 연산자
 
 ---
 
-# 문자열 결합 연산자
+## 문자열 결합 연산자
 
 자바스크립트에서 덧셈 연산자는 피연산자의 타입에 따라 두 가지 다른 연산을 수행합니다.
 
@@ -15,7 +15,7 @@
 
 ---
 
-# 삼항 연산자(ternary operator)
+## 삼항 연산자(ternary operator)
 
 삼항 연산자는 유일하게 피연산자를 세 개나 가지는 조건 연산자입니다.
 
@@ -27,8 +27,25 @@
 
 ---
 
-# 쉼표 연산자
+## 쉼표 연산자
 
 쉼표 연산자를 for문에서 사용하면, 루프마다 여러 변수를 동시에 갱신할 수 있다.
 
 ---
+
+## delete 연산자
+
+delete연산자는 피연산자인 객체, 객체의 프로퍼티(property)또는 배열의 요소(element)등을 삭제해준다
+
+피연산자가 성공적으로 삭제되었을 경우 참(true)을 반환, 실패시 거짓(false)을 반환
+
+이 연산자는 피연산자가 단 하나뿐인 단항 연산자이며, 피연산자의 결합 방향은 오른쪽에서 왼쪽입니다
+
+> 배열을 delete할 시 신기하게 연산이된다
+
+---
+
+## typeof 연산자
+
+typeof연산자는 피연산자의 타입을 반환한다.
+이 연산자는 피연산자가 단 하나뿐인 단항 연산자이며, 피 연산자의 결과값
