--- a/Gookbe/java/01_08.20.md
+++ b/Gookbe/java/01_08.20.md
@@ -30,6 +30,8 @@ http://13.209.171.25:8181/
 
 ## 사용할 홈페이지
 
+라이브강의: https://live.kgitbank.com/b
+
 https://mgr.kgitbank.com/
 아이디는 20200310-IB-0098 입니다
 
