--- a/Gookbe/JS(자바스크립트)/02event/0201.DOM.md
+++ b/Gookbe/JS(자바스크립트)/02event/0201.DOM.md
@@ -42,6 +42,32 @@
 
 ---
 
+## 노드 삭제
+
+- remove()
+- removeChild(삭제 할 자식 노드): 자식 노드 삭제
+
+## 부모노드, 자식도느 **선택**
+
+- childNodes: 모든 자식노드 선택(단, 노드에 생략된 text도)
+  > 요소로 만들어진 요소만 가져옴
+- children: 모든 자식 노드 선택
+- parentElement: 부모노드 선택(바로 이전부모노드)
+
+```
+부모 관계도
+doc > body > form
+# form
+- h3
+- input
+- button
+input기준으로 h3는 previousElementSibling(이전 사촌)
+input기준으로 button은 nextElementSibling
+
+```
+
+---
+
 # meno
 
 노드 css변경하기
