--- a/Gookbe/Spring/05(컨트롤러 객체구현).md
+++ b/Gookbe/Spring/05(컨트롤러 객체구현).md
@@ -36,6 +36,51 @@ String name = request.getParameter("name");
 
 ---
 
+## Model전달자 - 화면에 데이터를 전달하기 위한 객체
+
+### 1.Model 객체(ModelMap)★
+
+1. Model타입을 메서드의 파라미터로 주입하게 되면 view로 전달하는 데이터를 담아서 보낼 수 있다
+2. request.setAttribute()와 유사한 역할을 한다
+
+매서드매개변수로 모델객체를 쓰면 모델관련, addAttribute key값으
+
+### 2.ModelAndView 객체 (페이지와 데이터를 동시에 지정)
+
+```
+ex) addObject("변수명", "값"); >> 데이터
+ex) setViewName("페이지명"); >> 화면
+
+```
+
+### 3.ModelAttribute 어노테이션(잘쓰면 좋음)
+
+1. 전달받은 파라미터를 Model에 담아서 화면까지 전달하려 할 때 사용되는 어노테이션
+
+```
+ex) @ModelAttribute("받을값") 사용할 변수
+```
+
+### 4. RedirectAttribute 객체
+
+리다이렉트 이동시 파라미터 값을 전달하는 방법(일회성(flash))
+
+```
+ex)addFlashAttribute()
+```
+
+---
+
 # memo
 
 화면을 하나 생성하면(jsp) 컨트롤러에 화면을 보기 위해서 특정 요청 받을 시 화면을 보여주는 처리를 해주어야함
+
+---
+
+@RequestParam 어노테이션
+
+- 넘어오는 값을 받기만 한다(넘기지는 않는다)
+
+@ModelAttribute 어노테이션
+
+- 넘어오는 값을 받으며 forward방식으로 넘겨준다
