--- a/Gookbe/Spring/14(파일업로드).md
+++ b/Gookbe/Spring/14(파일업로드).md
@@ -20,7 +20,42 @@ $.ajax({
 
 ---
 
+## 비동기 업로드
+
+파일을 내 컴퓨터의 폴더에 저장 후 다시 불러오려고 하면
+
+웹 브라우저에서 내 컴퓨터로 접근을 해야하는 것이기 때문에 다른 방법을 통해 불러오지 않으면 안된다
+
+> 웹에서 내컴퓨터로 바로 접근한다면 말도안되는 일이 일어나겟지?
+
+### 이미지 불러오기 방법 01
+
+이미지 태그가 다음과같은 때, src가 경로를 읽어 호출하는 원리를 이용(get방식 처리)
+
+get방식처럼 주소로 설정 -> 컨트롤러 -> 가져오기 순서로 이용
+
+경로에 값을 주고 받기 때문에 @PathVariable을 이용해서 사용한다
+
+---
+
+### 이미지 불러오기 방법 02
+
+어려움, 다운받을 때는 무조건 사용한다, 헤더를 직접생성해 어떤내용인지 직접 지정해 알려준다
+파일은 결국 2진수인 바이너리 형태로 존재하고 어떤 형식인지 알려주지 않으면 해석할 수 없기 때문이다
+RestFul API를 개발하기위해 (반환데이터, HttpHeader, 상태코드)를 모두 지정해서 반환해주기 위해 사용되는 것이다
+
+일반적으로 웹 어플리케이션에서 알아서 타입을 지정(contentType)해 주거나 하는데
+
+---
+
 # 메모
 
 $.ajax의 속성중
 processData는 폼을 `&변수=값` 의 형식으로 자동 처리되는 것을 **막는요소**이다(get방식은 보안에 취약함)
+
+---
+
+이후 스프링에서 배울만한 것은
+security, betch(일정시간이 되면 특정코드를 동작시킴)
+
+Spring boot -> 쓰는곳을 만날때 배워두면 좋은것(보통은 Spring Legacy를 많이 쓴다)
