--- a/Gookbe/R(데이터분석)/01.md
+++ b/Gookbe/R(데이터분석)/01.md
@@ -2,6 +2,8 @@
 
 R이란 데잍커를 분석하는 프로그램 중 하나
 
+---
+
 ### 장점
 
 - 진입 장벽이 낮은 언어(하지만 외울게 많다)
@@ -41,4 +43,8 @@ R을 편하게 사용하기위해서 R스튜디오를 다운받자(개발도구)
 
 프로젝트 생성시 한글 절대 금지!!!!
 
-세미콜론은 안적어도 됨
+세미콜론을 사용하면 에러가 나오니 작성하지 않는다
+
+문자: `""` 혹은 `''`로 표기
+
+주석: `#`으로 작성
