--- a/Gookbe/R(데이터분석)/02(데이터타입).md
+++ b/Gookbe/R(데이터분석)/02(데이터타입).md
@@ -56,6 +56,35 @@ data.frame(a = c(1:3),
 
 ---
 
+## 데이터 수정하기
+
+### 행 데이터 수정하기
+
+```
+exam[1, ] <- 100 # 1행의 값을 전부 100으로 바꿈
+
+exam[1c(1,3,5), ] <- 100 #1,3,5행의 값을 모두 100으로 바꿈
+```
+
+### 조건에 따른 열 데이터 추가하기
+
+---
+
+## 데이터 병합과 빈도수
+
+### 데이터 병합과 빈도수 확인
+
+- cbind(): 컬럼을 합칩니다
+  > 컬럼갯수가 맞지않는다면 합칠 수 없다
+  > 그냥 중복되서 들어간다
+- rbind(): row를 합칩니다
+  > 내가 생각하는 그 합침의 정석
+- table(): 컬럼의 빈도수를 구합니다
+- hist(): 빈도에 대해 간략한 histogram을 만듭니다
+  > 간단한 차트를 그려준다
+
+---
+
 # 메모
 
 **함수**
