--- a/Gookbe/R(데이터분석)/05(데이터파악기초).md
+++ b/Gookbe/R(데이터분석)/05(데이터파악기초).md
@@ -21,6 +21,51 @@
 
 ---
 
+### 행 데이터 추출
+
+- 대괄호안 쉼표 기준으로, 왼쪽에 행 번호(인덱스) 입력
+  > [행번호, ]
+  - 인덱스(index): 데이터의 위치 또는 순서를 의미하는 값
+  - 인덱싱(indexing): 인덱스를 이용해 데이터를 추출하는 작업
+
+```
+exam[1, ] # 1행 데이터 추출
+exam[2, ] # 2행 데이터 추출
+```
+
+---
+
+### 열 데이터 추출하기
+
+#### 열 번호로 변수 추출하기
+
+- 대괄호안 쉼표 오른쪽에 조건을 입력
+  > [ , 열번호]
+
+```
+exam[,1] # 첫 번째 열 추출
+exam[,2] # 두 번째 열 추출
+exam[,3] # 세 번째 열 추출
+```
+
+#### 변수명으로 변수 추출하기
+
+- 대괄호 안 쉼표기준 왼쪽에 변수명을 입력
+
+```
+exam[, "class"] # class변수 추출
+exam[, "math"] # math변수 추출
+exam[, c("class", "math", "english")] # class, math, english변수 추출
+```
+
+#### 조건에 만족하는 행 추출
+
+```
+exam[exam$class == 1, ] # class가 1인 행을 추출
+```
+
+---
+
 ## 메모
 
 - 4분위수: `|----|----|----|`
