1월7일 그래프그리는거 생각보다 재미있네

--- a/Gookbe/R(데이터분석)/07(이상,결측치 제거).md
+++ b/Gookbe/R(데이터분석)/07(이상,결측치 제거).md
@@ -3,12 +3,20 @@
 ## ✅ 결측치(Missing Value)란?
 
 - 누락된 값, 비어있는 값을 의미한다
+  > 그것은 바로 'NA'
 - 함수 적용불가, 분석 결과 왜곡시키게 된다
 - 반드시 제거 후 분석을 실시해야 한다
+  > 그것이 분석치의 신뢰도에 도움이 되니까
 
 ---
 
 ### 🥕 is.na(): 결측치 확인하기
+
+is.na(): NA의 존재여부를 확인해준다
+table(is.na(데이터세트)): 데이터세트 전체의 결측치 숫자(빈도)를 보여줌
+table(is.na(데이터세트$컬럼명)): 특정컬럼의 결측치 숫자(빈도)를 보여줌
+
+### 🥕 결측치 제거하기
 
 ### 🥕 na.rm = T: 함수에서 결측치 제거하고 사용하기
 
@@ -38,3 +46,9 @@ boxplotㅡㅇ로 나타낸 그래프에선
 결측치는 평균값으로 대체하거나 제외해서 사용
 
 boxplot명령어로 데이터를 이미지화 해서 확인 가능
+
+---
+
+왜 결측치를 NA로 하느냐?
+
+> NA를 제거하는 기능이 존재하고, 그것이 편하니까
