--- a/Book/Do_it_Data_structure_Java/01 기본 알고리즘/01알고리즘이란.md
+++ b/Book/Do_it_Data_structure_Java/01 기본 알고리즘/01알고리즘이란.md
@@ -22,8 +22,7 @@ public class Max3 {
 		System.out.print("c: ");
 		int c = kb.nextInt();
 		
-		int max = a; //max에 a를 최초로 대입
-		//b,c와 비교 후 max값을 변경
+		int max = a; 
 		if(b > max) max = b;
 		if(c > max) max = c;
 		
@@ -31,6 +30,197 @@ public class Max3 {
 	}
 }
 ```
+
+위의 식은
+
+1. max에 a값을 넣는다.
+2. b가 max보다 크면 max에 b를 대입.
+3. c가 max보다 크면 max에 c를 대입
+
+으로 진행한다.
+
+이렇게 여러 문장이 순차적으로 실행되는 구조를 순차적(concatenation)구조라고 한다.
+
+하지만 1은 단순한 대입이고 2,3은 if문이다.
+
+if문의 괄호안에 있는 식의 평가 결과에 따라 프로그램의 실행 흐름을 변경하는 것을 선택(selection)구조라고 한다.
+
+
+
+세 값의 최대값을 구하는 순서를 이해하기 쉽게 순서도를 이용해 그려보면 아래와 같이 생긴다
+
+![flowchar01.jpg](https://github.com/JaeHyun-Ban/TIL/blob/master/ETC/Book/Do_it_Data_structure_Java/01/flowchar01.jpg?raw=true)
+
+`검은색 실선`을 따라 위에서 아래로 향하고, 그 과정에 `네모칸`에 작성한 처리 과정이 실행된다.
+
+`마름모`를 지날 때는 안에 작성된 조건을 평가해 결과에 따라 Yes, NO 중 하나를 따라가게 된다.
+
+<br/>
+
+프로그램의 흐름은 두 갈래 중 어느 한쪽을 지나는데, if문에 의한 프로그램 흐름의 분기를 **쌍기**(양갈래)선택이라고 한다.
+
+---
+
+이제 여러 값에 대해서도 최댓값을 구하는 것을 작성해 보는데, 이런 경우 값을 하나하나 입력하며 하는것 보단 프로그램을 작성하여 하는것이 더 좋다.
+
+```java
+public class Max3m {
+	static int max3(int a, int b, int c) {
+		int max = a;
+		if(b > max) max = b;
+		if(c > max) max = c;
+		
+		return max;
+	}
+	
+	public static void main(String[] args) {
+		System.out.println("max(3,2,1) = " + max3(3, 2, 1));
+		System.out.println("max(6,1,2) = " + max3(6, 1, 2));
+		System.out.println("max(3,7,2) = " + max3(3, 7, 2));
+	}
+}
+```
+
+위처럼 최대값을 여러번 반복해서 구하는 경우에는 메서드로 처리하면 편리합니다.
+
+a,b,c에서 받은 값 중 최대값을 구하고 그것을 int로 반환하는 max3메서드를 생성해 주었다.
+
+
+
+'알고리즘'은 다음과 같이 정의할 수 있다.
+
+> **문제를 해결하기 위한 것**으로, **명확하게 정의**되고 순서가 있는 유한 개의 규칙으로 이루어진 집합
+
+아무리 명확하게 알고리즘을 정의해도 <u>변수의 값에 따라 결과가 맞기도 하고 틀리기도 한다</u>면 **올바른 알고리즘이라 할 수 없다**.
+
+---
+
+### 연습 문제
+
+Q1. 네 값의 최대값을 구하는 max4메서드를 작성하시오
+
+```java
+public class Max4 {
+	static int max4(int a, int b, int c, int d) {
+		int max = a;
+		if(b > max) max = b;
+		if(c > max) max = c;
+		if(d > max) max = d;
+		
+		return max;
+	}
+	
+	public static void main(String[] args) {
+		//여기선 메서드를 불러다 테스트를 할 뿐
+		System.out.println("max4(1,4,6,7) = "  + max4(1,4,6,7));
+		System.out.println("max4(7,5,3,9) = "  + max4(7,5,3,9));
+		System.out.println("max4(0,11,5,3) = "  + max4(0,11,5,3));
+		System.out.println("max4(2,9,4,12) = "  + max4(2,9,4,12));
+		System.out.println("max4(34,33,22,11) = "  + max4(34,33,22,11));
+	}
+}
+```
+
+
+
+Q2. 세 값의 최솟값을 구하는 min3 메서드를 작성하시오.
+
+```java
+public class Min3 {
+	static int min3(int a, int b, int c) {
+		int min = a;
+		if(b < min) b = min;
+		if(c < min) c = min;
+		
+		return min;
+	}
+	public static void main(String[] args) {
+		System.out.println("min3(1,3,5) = " + min3(1, 3, 5));
+		System.out.println("min3(2,4,7) = " + min3(2, 4, 7));
+		System.out.println("min3(5,8,11) = " + min3(5, 8, 11));
+	}
+}
+```
+
+
+
+Q3. 네 값의 최솟값을 구하는 min4 메서드를 작성하세요.
+
+```java
+public class Min4 {
+	static int min4(int a, int b, int c, int d) {
+		int min = a;
+		if(b < min) min = b;
+		if(c < min) min = c;
+		if(d < min) min = d;
+		
+		return min;
+	}
+	public static void main(String[] args) {
+		System.out.println("min4(1,3,5,8) = " + min4(1, 3, 5, 8));
+		System.out.println("min4(2,4,7,11) = " + min4(2,4,7,11));
+		System.out.println("min4(5,8,11,13) = " + min4(5,8,11,13));
+		System.out.println("min4(66,3,22,33) = " + min4(66,3,22,33));
+	}
+}
+```
+
+
+
+---
+
+### 세 값의 중앙값
+
+최댓값, 최솟값과 달리 중앙값을 구하는 절차는 매우 복잡하다.(그래서 수많은 알고리즘을 생각할 수 있다.)
+
+다음 실습은 중앙값을 구하는 프로그램이다.
+
+```java
+public class Median {
+	static int med3(int a, int b, int c) {
+		if(a >= b)
+			if(b >= c)
+				return b;
+			else if (a <= c)
+				return a;
+			else
+				return c;
+		else if (a > c)
+			return a;
+		else if (b > c)
+			return c;
+		else
+			return b;
+	}
+	
+	public static void main(String[] args) {
+		Scanner kb = new Scanner(System.in);
+		
+		System.out.println("세 정수의 중앙값을 구해보자");
+		System.out.print("a: ");
+		int a = kb.nextInt();//a변수저장
+		System.out.print("b: ");
+		int b = kb.nextInt();//b변수저장
+		System.out.print("c: ");
+		int c = kb.nextInt();//c변수저장
+		kb.close();
+		
+		System.out.println("중앙값은 " + med3(a, b, c));
+	}
+}
+```
+
+세 값의 중앙값을 구하는 과정은 '퀵 정렬(quick sort)'에서도 사용한다.
+
+---
+
+### 연습문제
+
+Q4 세 값의 대소 관계 13종류의 모든 조합에 대하여 중앙값을 구하여 출력하는 프로그램을 작성하시오
+
+
+
+
 
 
 
