--- a/BaekJoon/15552.md
+++ b/BaekJoon/15552.md
@@ -21,10 +21,11 @@ public class Main {
 			st = new StringTokenizer(br.readLine());
             //st를 이용해 공백단위로 끊어진 숫자를 하나씩 꺼내준다.
             //String이기 대문에 Integer.parseInt를 사용해 int로 변경해준다.
+            //bw(output역활)에 저장
 			bw.write(Integer.parseInt(st.nextToken()) + Integer.parseInt(st.nextToken())+"\n");
 			
 		}
-		bw.flush();//flush는 Buffer에 쌓여있는 데이터를 한꺼번에 내보내준다.
+		bw.flush();//flush는 Bw에 쌓여있는 데이터를 한꺼번에 내보내준다.
 		br.close();
 		bw.close();
 	
