--- a/BaekJoon/1102.md
+++ b/BaekJoon/1102.md
@@ -2,7 +2,7 @@
 
 > Scanner대신 Buffer사용해보기
 
-![image-20210830163901674](C:\Users\Win10\AppData\Roaming\Typora\typora-user-images\image-20210830163901674.png)
+![image-20210830163901674](https://user-images.githubusercontent.com/60961649/131618937-1b4041ed-2a90-42d5-8790-d5bc8fe3cced.png)
 
 ```java
 import java.io.BufferedReader;
