--- a/BaekJoon/11022.md
+++ b/BaekJoon/11022.md
@@ -2,7 +2,7 @@
 
 > Scanner대신 Buffer사용해보기
 
-![image-20210830165324316](C:\Users\Win10\AppData\Roaming\Typora\typora-user-images\image-20210830165324316.png)
+![image](https://user-images.githubusercontent.com/60961649/131618594-c3b69a34-2615-4790-93c2-996484a98b01.png)
 
 
 
@@ -24,10 +24,9 @@ public class Main {
 		int n = Integer.parseInt(bw.readLine());
 		for(int i = 1; i < n + 1; i++) {
 			st = new StringTokenizer(bw.readLine());
-          	//코드가 길어져서 따로 변수에 저장
-			int a = Integer.parseInt(st.nextToken());
+			int a = Integer.parseInt(st.nextToken());//코드가 길어져서 따로 변수에 저장
 			int b = Integer.parseInt(st.nextToken());
-            //(a + b) >> 괄호를 사용하지 않으면 사칙연산을 하지 않는다
+             //(a + b) >> 괄호를 사용하지 않으면 사칙연산을 하지 않는다
 			br.write("Case #" + i + ": " + a + " + " + b + " = " + (a + b) +"\n");
 		}
 		br.flush();
