--- a/BaekJoon/2439.md
+++ b/BaekJoon/2439.md
@@ -2,7 +2,7 @@
 
 > Scanner대신 Buffer사용해보기
 
-![image-20210830171237224](C:\Users\Win10\AppData\Roaming\Typora\typora-user-images\image-20210830171237224.png)
+![image-20210830171237224](https://user-images.githubusercontent.com/60961649/131618875-7c5d4998-e7ed-4c81-ba9e-5898176a9c93.png)
 
 
 
@@ -20,13 +20,13 @@ public class Main {
 		BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
 		
 		int n = Integer.parseInt(br.readLine());
-        //i는 1부터 시작해야된다 > 0부터하면 맞지않아짐
+         //i는 1부터 시작해야된다 > 0부터하면 맞지않아짐
 		for(int i = 1; i < n+1 ; i++) {
-            //공백갯수 = 반복횟수의 역순
+             //공백갯수 = 반복횟수의 역순
 			for(int j = 0; j < n-i; j++) {
 				bw.write(" ");
 			}
-            //별갯수 조절 = 반복횟수
+             //별갯수 조절 = 반복횟수
 			for(int k = 0; k < i; k++) {
 				bw.write("*");
 			}
