--- a/BaekJoon/2742.md
+++ b/BaekJoon/2742.md
@@ -2,7 +2,7 @@
 
 > Scanner대신 Buffer사용해보기
 
-![image-20210830163428821](C:\Users\Win10\AppData\Roaming\Typora\typora-user-images\image-20210830163428821.png)
+![image-20210830163428821](https://user-images.githubusercontent.com/60961649/131618836-73a2b7df-9a57-46e6-a78d-050e56ecb788.png)
 
 ```java
 import java.io.BufferedReader;
@@ -18,7 +18,7 @@ public class Main {
 		BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
 		
 		int n = Integer.parseInt(br.readLine()); 
-        //시작을 n부터 0보다 클때까지 `i--`를 반복해주면 끝
+          //시작을 n부터 0보다 클때까지 `i--`를 반복해주면 끝
 		for(int i = n; i > 0; i--) {
 			bw.write(i + "\n");
 		}
