--- a/BaekJoon/10951.md
+++ b/BaekJoon/10951.md
@@ -4,8 +4,6 @@
 
 ![image-20210831181146496](https://user-images.githubusercontent.com/60961649/131618742-beb9bb42-07f7-4710-8668-1746e7d256ed.png)
 
-
-
 ```java
 import java.io.BufferedReader;
 import java.io.BufferedWriter;
@@ -20,14 +18,14 @@ public class Main {
 		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
 		BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(System.out));
 		StringTokenizer st;
-		
-		while(true) {//조건 전까지 무한으로 입력받음
-			st = new StringTokenizer(br.readLine());
-			int a = Integer.parseInt(st.nextToken());
-			int b = Integer.parseInt(st.nextToken());
-			if(a == 0 && b == 0)//a와 b가 0으로 입력받을 시 멈춤
+
+		String str = "";//Bufferedreader의 EOF법
+		while((str = br.readLine()) != null) {
+			st = new StringTokenizer(str);
+			if(st.hasMoreTokens()) {
+				bw.write(Integer.parseInt(st.nextToken()) + Integer.parseInt(st.nextToken()) + "\n");
+			} else
 				break;
-			bw.write(a + b + "\n");//개행문자 빼먹지 말기
 		}
 		bw.flush();
 		br.close();
@@ -35,8 +33,6 @@ public class Main {
 	}
 }
 ```
-
-
 
 ### EOF
 
