--- a/BaekJoon/1102.md
+++ b/BaekJoon/1102.md
@@ -18,13 +18,13 @@ public class Main {
 		BufferedReader bw = new BufferedReader(new InputStreamReader(System.in));
 		BufferedWriter br = new BufferedWriter(new OutputStreamWriter(System.out));
 		StringTokenizer st;//공백으로 나누어진 2개의 숫자를 입력받을 때 사용
-		
+
 		int n = Integer.parseInt(bw.readLine());
 		for(int i = 1; i < n + 1; i++) {
 			st = new StringTokenizer(bw.readLine());
 			br.write("Case #" + i + ": " + (Integer.parseInt(st.nextToken()) + Integer.parseInt(st.nextToken())) + "\n");
-            //>//br.write안에 계산하고 싶은 숫자를 Integer.parseInt(st.nextToken()) + Integer.parseInt(st.nextToken())로 작성했더니 문자열의 합처럼 출력되었다.
-            //>> (Integer.parseInt(st.nextToken()) + Integer.parseInt(st.nextToken())) 괄호를 쳐주는 것으로 해결되었다.
+			//br.write안에 계산하고 싶은 숫자를 Integer.parseInt(st.nextToken()) + Integer.parseInt(st.nextToken())로 작성했더니 문자열의 합처럼 출력되었다.
+			//(Integer.parseInt(st.nextToken()) + Integer.parseInt(st.nextToken())) 괄호를 쳐주는 것으로 해결되었다.
 		}
 		br.flush();
 		bw.close();
@@ -32,4 +32,3 @@ public class Main {
 	}
 }
 ```
-
