--- a/Book/Do_it_Data_structure_Java/01 기본 알고리즘/01알고리즘이란.md
+++ b/Book/Do_it_Data_structure_Java/01 기본 알고리즘/01알고리즘이란.md
@@ -216,7 +216,7 @@ public class Median {
 
 ### 연습문제
 
-Q4 세 값의 대소 관계 13종류의 모든 조합에 대하여 중앙값을 구하여 출력하는 프로그램을 작성하시오
+Q4. 세 값의 대소 관계 13종류의 모든 조합에 대하여 중앙값을 구하여 출력하는 프로그램을 작성하시오
 
 
 
