--- a/BaekJoon/1110.md
+++ b/BaekJoon/1110.md
@@ -16,13 +16,11 @@ public class Main {
 		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
 
 		int num = Integer.parseInt(br.readLine());//최초 입력 수
-		int reco = num;//저장
+		int reco = num;//최초 입력값 저장
 		int cnt = 0;//카운트
 
 		while(true) {
 			num = (num%10)*10 + (((num/10) + (num%10))%10);
-			//num%10
-
 			cnt++;
 
 			if(num == reco)
