--- a/springboot/10.http 1.1의 요청방식.md
+++ b/springboot/10.http 1.1의 요청방식.md
@@ -6,7 +6,7 @@
 
 ### 통신방법 4가지
 
-**GET**: 데이터를 주세요**(요청)** - select 
+**GET**: 데이터를 주세요 **요청** - select
 
 > 클라이언트가 서버에 요청하는 것이다
 >
@@ -20,9 +20,4 @@
 
 위 네가지 통신방법에는 어떻게(HOW)가 필요하다.
 
-
-
 ![image](https://user-images.githubusercontent.com/60961649/137872744-717e7abc-61ac-4124-af28-f326a6b32dac.png)
-
-
-
