--- a/springboot/15.maven이란.md
+++ b/springboot/15.maven이란.md
@@ -1,1 +1,12 @@
 # maven 이란?
+
+라이브러리의 중앙 저장소 같은 역할
+
+Lombok, ojdbc, json과 같은 라이브러리들을 필요할 때마다 해당 사이트에 접속해 다운받아서 사용하는 것이 아닌
+
+pom.xml에 필요한 라이브러리를 작성해 놓으면 프로젝트 실행 시 maven이 pom.xml을 읽어서 .m2폴더에 repository폴더를 생성한다.
+그리고 repository폴더 안에 pom.xml에 작성한 라이브러리들을 전부 다운받아주고 빌드까지 자동으로 해준다.
+
+배포시에 pom.xml을 넣어두기만 하면 필요한 라이브러리들을 모두 넣어서 배포하지 않아도 되게 된다.
+
+> maven만 추가로 설치하면 필요한 라이브러리를 전부 다운받아주니까
