--- a/springboot/17.yml설정하기.md
+++ b/springboot/17.yml설정하기.md
@@ -4,28 +4,36 @@ yml파일(야몰파일 이라고 불림)
 json보다 경량데이터를 만들기 위해 yml을 사용함
 json에 사용하는""가 존재하지 않음
 
-key와 Value사이에 무조껀 한칸이 띄워져 있어야함(중요규칙)
+🚨 key와 Value사이에 무조껀 한칸이 띄워져 있어야함(중요규칙)
 
 > `apiVersion: vi`
 
-중괄호는 존재하지 않고 들여쓰기로 구분함(2칸)
+중괄호는 존재하지 않고 들여쓰기로 구분함(2칸), 파이썬 문법과 비슷한 구조
 
-> 파이썬과 비슷하네
+```yml
+yml파일 예시
+server:
+  port: 8000
+  servlet:
+    context-path: /blog
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+```
 
-root-context.xml에는 한번만 이용되는 그런 종류를 설정하는곳
-servlet-context.xml에는 지속적으로 이용되는 것을 설정하는곳
+- root-context.xml에는 한번만 이용되는 그런 종류를 설정하는곳
+- servlet-context.xml에는 지속적으로 이용되는 것을 설정하는곳
 
 근데 스프링에서는 root-context랑 servlet-context는 건드리지 않을꺼임
 
-yml파일을쓸꺼라
-
-> 굉장히 편리한데? 마치 Java하다 Python하는 느낌
+**yml파일**을 쓰기때문
 
 스프링 프로젝트 시작하기 전에 yml파일을 읽고 시작한다
 
 context-path - 최초 경로(주소)
 
-## 스프링부트가 어떻게 동작하는가
+## 🥕 스프링부트가 어떻게 동작하는가
 
 스프링은 파일을 리턴하려고 할 때
 컨트롤러 어노테이션이 붙은 메서드는 파일을 리턴한다
@@ -42,3 +50,16 @@ static에는 정적파일만 올 수 있기 때문이다.
 - 정적파일: 이미지파일...단순 파일들
 
 ---
+
+**jsp파일**은 JAVA파일로 동적인 파일이기 때문에 **컴파일** 과정이 필요하다
+
+prefix: 컨트롤러가 리턴을 할 때 앞에 붙여주는 경로면
+suffix: 뒤에 붙여주는 경로
+
+```yml
+spring:
+  mvc:
+    view:
+      prefix: /WEB-INF/views/
+      suffix: .jsp
+```
